--- a/po/it.po
+++ b/po/it.po
@@ -1,23 +1,23 @@
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
-#
+# 
 # Translators:
-# Arjen Balfoort <schoelje@solydxk.com>, 2015
+# Arjen Balfoort <arjenbalfoort@solydxk.com>, 2015
 # Davide Favaro <belzebu87@gmail.com>, 2015
+# Franco Frolloni <frolloni@gmail.com>, 2017
 msgid ""
 msgstr ""
 "Project-Id-Version: device-driver-manager\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-04-01 18:43+0200\n"
-"PO-Revision-Date: 2016-01-18 10:22+0000\n"
-"Last-Translator: Davide Favaro <belzebu87@gmail.com>\n"
-"Language-Team: Italian (http://www.transifex.com/solydxk/device-driver-"
-"manager/language/it/)\n"
-"Language: it\n"
+"PO-Revision-Date: 2017-04-25 15:02+0000\n"
+"Last-Translator: Franco Frolloni <frolloni@gmail.com>\n"
+"Language-Team: Italian (http://www.transifex.com/solydxk/device-driver-manager/language/it/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Language: it\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #: ../usr/lib/ddm/ddm.py:54 ../usr/lib/ddm/main.py:32
@@ -54,28 +54,17 @@ msgstr "Nessuna connessione internet"
 msgid ""
 "You need an internet connection to install the additional software.\n"
 "Please, connect to the internet and try again."
-msgstr ""
-"Una connessione internet è necessaria per installare software aggiuntivo. "
-"Connettersi ad internet e riprovare."
+msgstr "Una connessione internet è necessaria per installare software aggiuntivo. Connettersi ad internet e riprovare."
 
 #: ../usr/lib/ddm/ddm.py:187
 msgid ""
-"You have selected to install drivers from the backports repository whenever "
-"they are available.\n"
+"You have selected to install drivers from the backports repository whenever they are available.\n"
 "\n"
-"Although you can run more up to date software using the backports "
-"repository,\n"
+"Although you can run more up to date software using the backports repository,\n"
 "you introduce a greater risk of breakage doing so.\n"
 "\n"
 "Are you sure you want to continue?"
-msgstr ""
-"È stato scelto di installare drivers dai canali backports quando "
-"disponibili.\n"
-"\n"
-"Installando software più aggiornato tramite i backports\n"
-"si introducono maggiori rischi potenziali per la stabilità del sistema.\n"
-"\n"
-"Procedere?"
+msgstr "È stato scelto di installare drivers dai canali backports quando disponibili.\n\nInstallando software più aggiornato tramite i backports\nsi introducono maggiori rischi potenziali per la stabilità del sistema.\n\nProcedere?"
 
 #: ../usr/lib/ddm/ddm.py:221
 msgid "Device"
@@ -89,9 +78,7 @@ msgstr "Rimuovi kernel"
 msgid ""
 "You cannot remove a booted kernel.\n"
 "Please, boot another kernel and try again."
-msgstr ""
-"Impossibile rimuovere il kernel in esecuzione.\n"
-"Riavviare con un altro kernel e riprovare"
+msgstr "Impossibile rimuovere il kernel in esecuzione.\nRiavviare con un altro kernel e riprovare"
 
 #: ../usr/lib/ddm/ddm.py:259
 msgid "Hardware scan"
@@ -111,15 +98,10 @@ msgstr "Trovata scheda ATI FirePro/GI"
 
 #: ../usr/lib/ddm/ddm.py:364
 msgid ""
-"Installing the proprietary driver for an ATI FirePro/Gl card may render your "
-"system unbootable.\n"
+"Installing the proprietary driver for an ATI FirePro/Gl card may render your system unbootable.\n"
 "\n"
 "Proceed at your own risk."
-msgstr ""
-"Installare driver proprietari per ATI FirePro/GI potrebbe rendere il sistema "
-"non avviabile.\n"
-"\n"
-"Procedere a proprio rischio e pericolo."
+msgstr "Installare driver proprietari per ATI FirePro/GI potrebbe rendere il sistema non avviabile.\n\nProcedere a proprio rischio e pericolo."
 
 #: ../usr/lib/ddm/ddm.py:562
 msgid "PAE capable system"
@@ -145,9 +127,7 @@ msgstr "Il driver richiesto non è stato trovato in alcun repository."
 msgid ""
 "Download error.\n"
 "Check your internet connection."
-msgstr ""
-"Errore di scaricamento.\n"
-"Controllare la connessione ad internet."
+msgstr "Errore di scaricamento.\nControllare la connessione ad internet."
 
 #: ../usr/lib/ddm/ddm.py:686
 msgid "DDM cannot purge the driver."
@@ -161,21 +141,18 @@ msgstr "Scheda non supportata."
 msgid ""
 "Cannot get the Debian version from /etc/debian_version.\n"
 "Please install the base-files package."
-msgstr ""
+msgstr "Impossibile recuperare la versione di Debian da /etc/debian_version.\nPrego installare il pacchetto di file di base"
 
 #: ../usr/lib/ddm/ddm.py:692
 msgid "Could not configure Nvidia Bumblebee."
-msgstr ""
+msgstr "Impossibile configurare Nvidia Bumblebee."
 
 #: ../usr/lib/ddm/ddm.py:694
 msgid ""
 "There was an error during the installation.\n"
 "Please, run 'sudo apt-get -f install' in a terminal.\n"
 "Visit our forum for support: http://forums.solydxk.com"
-msgstr ""
-"Errore durante l'installazione.\n"
-"Aprire un terminale ed eseguire 'sudo apt-get -f install'.\n"
-"Visitare il forum per ottenere supporto: http://forums.solydxk.com"
+msgstr "Errore durante l'installazione.\nAprire un terminale ed eseguire 'sudo apt-get -f install'.\nVisitare il forum per ottenere supporto: http://forums.solydxk.com"
 
 #: ../usr/lib/ddm/ddm.py:699
 msgid "The software has been successfully installed."
@@ -187,24 +164,16 @@ msgstr "È necessario riavviare il sistema"
 
 #: ../usr/lib/ddm/main.py:33
 msgid ""
-"Device Driver Manager helps to install proprietary drivers for your "
-"hardware.\n"
+"Device Driver Manager helps to install proprietary drivers for your hardware.\n"
 "Only install proprietary drivers if you are sure you really need them.\n"
 "Usually open drivers are enough."
-msgstr ""
-"Device Driver Manager aiuta nell'installazione di driver proprietari per il "
-"proprio hardware.\n"
-"Installare driver proprietari solo in caso di effettiva necessità.\n"
-"Normalmente i driver open-source sono sufficienti."
+msgstr "Device Driver Manager aiuta nell'installazione di driver proprietari per il proprio hardware.\nInstallare driver proprietari solo in caso di effettiva necessità.\nNormalmente i driver open-source sono sufficienti."
 
 #: ../usr/lib/ddm/main.py:55
 msgid ""
 "Device Driver Manager cannot be started in a live environment\n"
 "You can use the --force argument to start DDM in a live environment"
-msgstr ""
-"DDM non può essere eseguito in un live environment\n"
-"\n"
-"Per forzarne l'avvio, usare l'argomento --force"
+msgstr "DDM non può essere eseguito in un live environment\n\nPer forzarne l'avvio, usare l'argomento --force"
 
 #: ../usr/lib/ddm/main.py:83
 msgid "Unexpected error"
@@ -214,9 +183,7 @@ msgstr "Errore inatteso"
 msgid ""
 "DDM has failed with the following unexpected error. Please submit a bug "
 "report!"
-msgstr ""
-"DDM riporta il seguente messaggio di errore inatteso. Si consiglia di "
-"inviare una segnalazione del bug!"
+msgstr "DDM riporta il seguente messaggio di errore inatteso. Si consiglia di inviare una segnalazione del bug!"
 
 #: en/help.html+html.body.h1:8
 msgid "Device Driver Manager Help"
@@ -233,13 +200,7 @@ msgid ""
 "installed and allows to install the PAE kernel for multi-core 32-bit "
 "systems. The Device Driver Manager will only list those devices that are "
 "supported. It will not list any other devices then mentioned above."
-msgstr ""
-"Device Driver Manager è uno strumento di supporto per l'installazione di "
-"driver di terze parti. Al momento possono essere installati i driver per "
-"Nvidia, ATI e Broadcom oltre ad un kernel PAE per i sistemi multi core a "
-"32bit. Devide Driver Manager presenterà una lista con le sole componenti "
-"supportate. Non verranno mostrate altre periferiche oltre a quelle "
-"menzionate in precedenza."
+msgstr "Device Driver Manager è uno strumento di supporto per l'installazione di driver di terze parti. Al momento possono essere installati i driver per Nvidia, ATI e Broadcom oltre ad un kernel PAE per i sistemi multi core a 32bit. Devide Driver Manager presenterà una lista con le sole componenti supportate. Non verranno mostrate altre periferiche oltre a quelle menzionate in precedenza."
 
 #: en/help.html+html.body.div.h2:13
 msgid "Important"
@@ -250,10 +211,7 @@ msgid ""
 "The Device Driver Manager can only install drivers which are available in "
 "the repositories. Make sure you have an internet connection if you want to "
 "install the drivers."
-msgstr ""
-"Device Driver Manager offre supporto all'installazione di driver disponibili "
-"nei repositories. Assicurarsi di disporre di una connessione a internet per "
-"installare i driver."
+msgstr "Device Driver Manager offre supporto all'installazione di driver disponibili nei repositories. Assicurarsi di disporre di una connessione a internet per installare i driver."
 
 #: en/help.html+html.body.div.h2:16
 msgid "Commands"
@@ -263,9 +221,7 @@ msgstr "Comandi"
 msgid ""
 "If you prefer to install the drivers by terminal, you can use the following "
 "commands:"
-msgstr ""
-"Se si preferisce l'installazione dei driver usando un terminale, i comandi "
-"da eseguire sono:"
+msgstr "Se si preferisce l'installazione dei driver usando un terminale, i comandi da eseguire sono:"
 
 #: en/help.html+html.body.div.h3:21
 msgid "# ddm -i ati"
@@ -277,12 +233,7 @@ msgid ""
 "from version HD 5000 and up are supported by the fglrx drivers. Versions "
 "between 1000 and 5000 will use the Radeon drivers. Use \"ddm -p ati\" to "
 "remove the drivers from your system."
-msgstr ""
-"Procedendo verranno installati i driver fglrx per la scheda video ATI. Le "
-"schede video ATI dalla versione HD 5000 e successive sono supportate dai "
-"driver fglrx. Per le versioni tra la 1000 e la 5000 verrà usato il driver "
-"Radeon. Per eliminare i driver dal sistema, eseguire in un terminale \"ddm -"
-"p ati\"."
+msgstr "Procedendo verranno installati i driver fglrx per la scheda video ATI. Le schede video ATI dalla versione HD 5000 e successive sono supportate dai driver fglrx. Per le versioni tra la 1000 e la 5000 verrà usato il driver Radeon. Per eliminare i driver dal sistema, eseguire in un terminale \"ddm -p ati\"."
 
 #: en/help.html+html.body.div.h3:24
 msgid "# ddm -i nvidia"
@@ -291,13 +242,9 @@ msgstr "# ddm -i nvidia"
 #: en/help.html+html.body.div.p:25
 msgid ""
 "This will select the right drivers for your Nvidia graphical card. It will "
-"select the Bumblebee drivers in case you have a hybrid card (both Nvidia and "
-"Intel). Use \"ddm -p nvidia\" to remove the drivers from your system."
-msgstr ""
-"Procedendo verranno installati i driver corretti per la scheda video Nvidia. "
-"Verrà selezionato il driver Bumblebee nel caso il sistema disponga di una "
-"scheda ibrida (Nvidia e Intel). Per eliminare i driver dal sistema, eseguire "
-"in un terminale \"ddm -p nvidia\"."
+"select the Bumblebee drivers in case you have a hybrid card (both Nvidia and"
+" Intel). Use \"ddm -p nvidia\" to remove the drivers from your system."
+msgstr "Procedendo verranno installati i driver corretti per la scheda video Nvidia. Verrà selezionato il driver Bumblebee nel caso il sistema disponga di una scheda ibrida (Nvidia e Intel). Per eliminare i driver dal sistema, eseguire in un terminale \"ddm -p nvidia\"."
 
 #: en/help.html+html.body.div.h3:27
 msgid "# ddm -i open"
@@ -307,9 +254,7 @@ msgstr "# ddm -i open"
 msgid ""
 "You can use this command if you want to revert back to the open Nouveau "
 "drivers. It will remove any proprietary drivers from your system."
-msgstr ""
-"Usare questo comando per ritornare ai driver open Nouveau. Verranno rimossi "
-"i driver proprietari dal sistema."
+msgstr "Usare questo comando per ritornare ai driver open Nouveau. Verranno rimossi i driver proprietari dal sistema."
 
 #: en/help.html+html.body.div.h3:30
 msgid "# ddm -i broadcom"
@@ -319,10 +264,7 @@ msgstr "# ddm -i broadcom"
 msgid ""
 "This command will install the right driver for your wireless Broadcom "
 "adapter. Use \"ddm -p broadcom\" to remove the drivers from your system."
-msgstr ""
-"Procedendo verranno installati i driver corretti per l'adattatore wireless "
-"Broadcom. Per eliminare i driver dal sistema, eseguire in un terminale \"ddm "
-"-p broadcom\"."
+msgstr "Procedendo verranno installati i driver corretti per l'adattatore wireless Broadcom. Per eliminare i driver dal sistema, eseguire in un terminale \"ddm -p broadcom\"."
 
 #: en/help.html+html.body.div.h3:33
 msgid "# ddm -i pae"
@@ -330,13 +272,11 @@ msgstr "# ddm -i pae"
 
 #: en/help.html+html.body.div.p:34
 msgid ""
-"This will install the PAE kernel on multi-processor systems running a 32-bit "
-"OS. Use \"ddm -p pae\" to remove the PAE kernel from your system. Note that "
-"you cannot remove the kernel when you are currently booted into that kernel."
-msgstr ""
-"Procedendo verrà installato il kernel PAE per sistemi multi core a 32bit. "
-"Per rimuovere il kernel PAE dal sistema, eseguire in un terminale \"ddm -p "
-"pae\". Nota: non è possibile rimuovere il kernel attualmente in uso."
+"This will install the PAE kernel on multi-processor systems running a 32-bit"
+" OS. Use \"ddm -p pae\" to remove the PAE kernel from your system. Note that"
+" you cannot remove the kernel when you are currently booted into that "
+"kernel."
+msgstr "Procedendo verrà installato il kernel PAE per sistemi multi core a 32bit. Per rimuovere il kernel PAE dal sistema, eseguire in un terminale \"ddm -p pae\". Nota: non è possibile rimuovere il kernel attualmente in uso."
 
 #: en/help.html+html.body.div.h3:36
 msgid "# ddm -i fixbumblebee"
@@ -348,7 +288,7 @@ msgstr "Procedendo verrà tentato il ripristino dell'installazione di Bumblebee"
 
 #: en/help.html+html.body.div.h2:39
 msgid "Logging"
-msgstr ""
+msgstr "Registrazione di log"
 
 #: en/help.html+html.body.div.h3:40
 msgid "File: /var/log/ddm.log"
@@ -356,9 +296,7 @@ msgstr "File: /var/log/ddm.log"
 
 #: en/help.html+html.body.div.p:41
 msgid ""
-"Please, attach your log file when you post an issue on our forum: <a href="
-"\"http://forums.solydxk.com\" target=\"_blank\">http://forums.solydxk.com</a>"
-msgstr ""
-"Si prega di allegare il log del processo per chiedere supporto sul forum: <a "
-"href=\"http://forums.solydxk.com\" target=\"_blank\">http://forums.solydxk."
-"com</a>1"
+"Please, attach your log file when you post an issue on our forum: <a "
+"href=\"http://forums.solydxk.com\" "
+"target=\"_blank\">http://forums.solydxk.com</a>"
+msgstr "Si prega di allegare il log del processo per chiedere supporto sul forum: <a href=\"http://forums.solydxk.com\" target=\"_blank\">http://forums.solydxk.com</a>1"
