--- a/po/ru.po
+++ b/po/ru.po
@@ -1,28 +1,25 @@
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
-#
+# 
 # Translators:
 # Михаил Ильинский <mail@milinsky.com>, 2015
 # Lek Lek <vlt380@yandex.ru>, 2016
 # Анатолий Валерианович <ffox909@mail.ru>, 2015
-# Михаил Ильинский <mail@milinsky.com>, 2016
+# Михаил Ильинский <mail@milinsky.com>, 2016-2017
 msgid ""
 msgstr ""
 "Project-Id-Version: device-driver-manager\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-04-01 18:43+0200\n"
-"PO-Revision-Date: 2016-12-18 08:02+0000\n"
+"PO-Revision-Date: 2017-04-10 23:27+0000\n"
 "Last-Translator: Михаил Ильинский <mail@milinsky.com>\n"
-"Language-Team: Russian (http://www.transifex.com/solydxk/device-driver-"
-"manager/language/ru/)\n"
-"Language: ru\n"
+"Language-Team: Russian (http://www.transifex.com/solydxk/device-driver-manager/language/ru/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=4; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
-"%10<=4 && (n%100<12 || n%100>14) ? 1 : n%10==0 || (n%10>=5 && n%10<=9) || (n"
-"%100>=11 && n%100<=14)? 2 : 3);\n"
+"Language: ru\n"
+"Plural-Forms: nplurals=4; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<12 || n%100>14) ? 1 : n%10==0 || (n%10>=5 && n%10<=9) || (n%100>=11 && n%100<=14)? 2 : 3);\n"
 
 #: ../usr/lib/ddm/ddm.py:54 ../usr/lib/ddm/main.py:32
 #: ../usr/share/kde4/services/kcm_device_driver_manager.desktop.in.h:1
@@ -58,29 +55,17 @@ msgstr "Нет подключения к интернету"
 msgid ""
 "You need an internet connection to install the additional software.\n"
 "Please, connect to the internet and try again."
-msgstr ""
-"Вам нужно подключение к интернету для установки дополнительного программного "
-"обеспечения.\n"
-"Пожалуйста, подключитесь к Интернету и повторите попытку"
+msgstr "Вам нужно подключение к интернету для установки дополнительного программного обеспечения.\nПожалуйста, подключитесь к Интернету и повторите попытку"
 
 #: ../usr/lib/ddm/ddm.py:187
 msgid ""
-"You have selected to install drivers from the backports repository whenever "
-"they are available.\n"
+"You have selected to install drivers from the backports repository whenever they are available.\n"
 "\n"
-"Although you can run more up to date software using the backports "
-"repository,\n"
+"Although you can run more up to date software using the backports repository,\n"
 "you introduce a greater risk of breakage doing so.\n"
 "\n"
 "Are you sure you want to continue?"
-msgstr ""
-"Вами выбрана установка драйверов из репозитория бэкпортов, если они "
-"доступны.\n"
-"\n"
-"Хотя используя бэкпорт-репозитории Вы можете работать со свежими версиями "
-"программного обеспечения, Вы делаете это на свой страх и риск.\n"
-"\n"
-"Уверены, что хотите продолжить?"
+msgstr "Вами выбрана установка драйверов из репозитория бэкпортов, если они доступны.\n\nХотя используя бэкпорт-репозитории Вы можете работать со свежими версиями программного обеспечения, Вы делаете это на свой страх и риск.\n\nУверены, что хотите продолжить?"
 
 #: ../usr/lib/ddm/ddm.py:221
 msgid "Device"
@@ -94,9 +79,7 @@ msgstr "Удалить ядра"
 msgid ""
 "You cannot remove a booted kernel.\n"
 "Please, boot another kernel and try again."
-msgstr ""
-"Вы не можете удалить запущенные ядра.\n"
-"Пожалуйста, загрузитесь с другого ядра и попробуйте снова."
+msgstr "Вы не можете удалить запущенные ядра.\nПожалуйста, загрузитесь с другого ядра и попробуйте снова."
 
 #: ../usr/lib/ddm/ddm.py:259
 msgid "Hardware scan"
@@ -116,15 +99,10 @@ msgstr "Обнаружена карта ATI FirePro/Gl"
 
 #: ../usr/lib/ddm/ddm.py:364
 msgid ""
-"Installing the proprietary driver for an ATI FirePro/Gl card may render your "
-"system unbootable.\n"
+"Installing the proprietary driver for an ATI FirePro/Gl card may render your system unbootable.\n"
 "\n"
 "Proceed at your own risk."
-msgstr ""
-"Установка несвободного драйвера для карты ATI FirePro/Gl, может сделать вашу "
-"систему не загружаемой.\n"
-"\n"
-"Действуйте на свой страх и риск."
+msgstr "Установка несвободного драйвера для карты ATI FirePro/Gl, может сделать вашу систему не загружаемой.\n\nДействуйте на свой страх и риск."
 
 #: ../usr/lib/ddm/ddm.py:562
 msgid "PAE capable system"
@@ -150,9 +128,7 @@ msgstr "Драйвер не найден в репозитории."
 msgid ""
 "Download error.\n"
 "Check your internet connection."
-msgstr ""
-"Ошибка загрузки.\n"
-"Проверьте ваше интернет-соединение."
+msgstr "Ошибка загрузки.\nПроверьте ваше интернет-соединение."
 
 #: ../usr/lib/ddm/ddm.py:686
 msgid "DDM cannot purge the driver."
@@ -166,21 +142,18 @@ msgstr "Эта карта не поддерживается."
 msgid ""
 "Cannot get the Debian version from /etc/debian_version.\n"
 "Please install the base-files package."
-msgstr ""
+msgstr "Не удалось получить версию Debian из /etc/debian_version.\nПожалуйста, установите базовый пакет файлов."
 
 #: ../usr/lib/ddm/ddm.py:692
 msgid "Could not configure Nvidia Bumblebee."
-msgstr ""
+msgstr "Не удалось настроить Nvidia Bumblebee."
 
 #: ../usr/lib/ddm/ddm.py:694
 msgid ""
 "There was an error during the installation.\n"
 "Please, run 'sudo apt-get -f install' in a terminal.\n"
 "Visit our forum for support: http://forums.solydxk.com"
-msgstr ""
-"Во время установки произошла ошибка.\n"
-"Пожалуйста, запустите 'sudo apt-get -f install' в терминале.\n"
-"Посетите наш форум поддержки: http://forums.solydxk.com"
+msgstr "Во время установки произошла ошибка.\nПожалуйста, запустите 'sudo apt-get -f install' в терминале.\nПосетите наш форум поддержки: http://forums.solydxk.com"
 
 #: ../usr/lib/ddm/ddm.py:699
 msgid "The software has been successfully installed."
@@ -192,23 +165,16 @@ msgstr "Вам нужно будет перезагрузить систему."
 
 #: ../usr/lib/ddm/main.py:33
 msgid ""
-"Device Driver Manager helps to install proprietary drivers for your "
-"hardware.\n"
+"Device Driver Manager helps to install proprietary drivers for your hardware.\n"
 "Only install proprietary drivers if you are sure you really need them.\n"
 "Usually open drivers are enough."
-msgstr ""
-"Менеджер драйверов устройств поможет установить несвободные драйверы для "
-"вашего оборудования.\n"
-"Устанавливайте несвободные драйверы, только если это необходимо.\n"
-"Обычно, свободных драйверов достаточно."
+msgstr "Менеджер драйверов устройств поможет установить несвободные драйверы для вашего оборудования.\nУстанавливайте несвободные драйверы, только если это необходимо.\nОбычно, свободных драйверов достаточно."
 
 #: ../usr/lib/ddm/main.py:55
 msgid ""
 "Device Driver Manager cannot be started in a live environment\n"
 "You can use the --force argument to start DDM in a live environment"
-msgstr ""
-"Менеджер драйверов не может быть запущена в live среде. \n"
-"Для принудительного запуска используйте --force."
+msgstr "Менеджер драйверов не может быть запущена в live среде. \nДля принудительного запуска используйте --force."
 
 #: ../usr/lib/ddm/main.py:83
 msgid "Unexpected error"
@@ -218,9 +184,7 @@ msgstr "Неожиданная ошибка"
 msgid ""
 "DDM has failed with the following unexpected error. Please submit a bug "
 "report!"
-msgstr ""
-"Менеджер Драйверов остановлен из-за неожиданной ошибки. Пожалуйста, "
-"отправьте отчет об ошибке"
+msgstr "Менеджер Драйверов остановлен из-за неожиданной ошибки. Пожалуйста, отправьте отчет об ошибке"
 
 #: en/help.html+html.body.h1:8
 msgid "Device Driver Manager Help"
@@ -237,12 +201,7 @@ msgid ""
 "installed and allows to install the PAE kernel for multi-core 32-bit "
 "systems. The Device Driver Manager will only list those devices that are "
 "supported. It will not list any other devices then mentioned above."
-msgstr ""
-"Менеджер Драйверов Устройств является инструментом, помогающим пользователям "
-"устанавливать сторонние драйвера оборудования. На данный момент возможна "
-"установка NVIDIA,  ATI и Broadcom драйверов, а так же установка pae-ядра для "
-"многоядерных 32-разрядных систем. В Менеджере Драйверов будет только список "
-"тех устройств, которые поддерживаются Вашим оборудованием. "
+msgstr "Менеджер Драйверов Устройств является инструментом, помогающим пользователям устанавливать сторонние драйвера оборудования. На данный момент возможна установка NVIDIA,  ATI и Broadcom драйверов, а так же установка pae-ядра для многоядерных 32-разрядных систем. В Менеджере Драйверов будет только список тех устройств, которые поддерживаются Вашим оборудованием. "
 
 #: en/help.html+html.body.div.h2:13
 msgid "Important"
@@ -253,10 +212,7 @@ msgid ""
 "The Device Driver Manager can only install drivers which are available in "
 "the repositories. Make sure you have an internet connection if you want to "
 "install the drivers."
-msgstr ""
-"Менеджер Драйверов может установить драйвера, только которые доступны в "
-"репозиториях. Убедитесь, что у вас есть интернет соединение если вы хотите "
-"установить драйверы."
+msgstr "Менеджер Драйверов может установить драйвера, только которые доступны в репозиториях. Убедитесь, что у вас есть интернет соединение если вы хотите установить драйверы."
 
 #: en/help.html+html.body.div.h2:16
 msgid "Commands"
@@ -266,9 +222,7 @@ msgstr "Команды"
 msgid ""
 "If you prefer to install the drivers by terminal, you can use the following "
 "commands:"
-msgstr ""
-"Если вы предпочитаете установить драйверы с помощью терминала, вы можете "
-"использовать следующие команды:"
+msgstr "Если вы предпочитаете установить драйверы с помощью терминала, вы можете использовать следующие команды:"
 
 #: en/help.html+html.body.div.h3:21
 msgid "# ddm -i ati"
@@ -280,11 +234,7 @@ msgid ""
 "from version HD 5000 and up are supported by the fglrx drivers. Versions "
 "between 1000 and 5000 will use the Radeon drivers. Use \"ddm -p ati\" to "
 "remove the drivers from your system."
-msgstr ""
-"Это установит fglrx драйверы для вашей графической карты ATI. ATI карты от "
-"версии HD 5000 и выше поддерживаются драйверами fglrx. Версии между 1000 и "
-"5000 будут использовать открытые драйверы Radeon. Используйте \"DDM -p ATI\" "
-"для удаления драйверов из системы."
+msgstr "Это установит fglrx драйверы для вашей графической карты ATI. ATI карты от версии HD 5000 и выше поддерживаются драйверами fglrx. Версии между 1000 и 5000 будут использовать открытые драйверы Radeon. Используйте \"DDM -p ATI\" для удаления драйверов из системы."
 
 #: en/help.html+html.body.div.h3:24
 msgid "# ddm -i nvidia"
@@ -293,12 +243,9 @@ msgstr "# ddm -i nvidia"
 #: en/help.html+html.body.div.p:25
 msgid ""
 "This will select the right drivers for your Nvidia graphical card. It will "
-"select the Bumblebee drivers in case you have a hybrid card (both Nvidia and "
-"Intel). Use \"ddm -p nvidia\" to remove the drivers from your system."
-msgstr ""
-"Это позволит выбрать правильные драйверы для видеокарты NVIDIA. Он подберет "
-"Bumblebee  в случае, если у вас гибридная карта (как NVIDIA и Intel). "
-"Используйте \"ddm -p nvidia\" чтобы удалить драйверы из системы."
+"select the Bumblebee drivers in case you have a hybrid card (both Nvidia and"
+" Intel). Use \"ddm -p nvidia\" to remove the drivers from your system."
+msgstr "Это позволит выбрать правильные драйверы для видеокарты NVIDIA. Он подберет Bumblebee  в случае, если у вас гибридная карта (как NVIDIA и Intel). Используйте \"ddm -p nvidia\" чтобы удалить драйверы из системы."
 
 #: en/help.html+html.body.div.h3:27
 msgid "# ddm -i open"
@@ -308,9 +255,7 @@ msgstr "# ddm -i open"
 msgid ""
 "You can use this command if you want to revert back to the open Nouveau "
 "drivers. It will remove any proprietary drivers from your system."
-msgstr ""
-"Вы можете использовать эту команду, если вы хотите вернуться к открытым "
-"драйверам. Это удалит любые проприетарные драйверы из вашей системы"
+msgstr "Вы можете использовать эту команду, если вы хотите вернуться к открытым драйверам. Это удалит любые проприетарные драйверы из вашей системы"
 
 #: en/help.html+html.body.div.h3:30
 msgid "# ddm -i broadcom"
@@ -320,9 +265,7 @@ msgstr "# ddm -i broadcom"
 msgid ""
 "This command will install the right driver for your wireless Broadcom "
 "adapter. Use \"ddm -p broadcom\" to remove the drivers from your system."
-msgstr ""
-"Эта команда установит нужный драйвер для вашего беспроводного адаптера "
-"Broadcom. Используйте \"ddm -p broadcom\" для удаления драйвера из системы."
+msgstr "Эта команда установит нужный драйвер для вашего беспроводного адаптера Broadcom. Используйте \"ddm -p broadcom\" для удаления драйвера из системы."
 
 #: en/help.html+html.body.div.h3:33
 msgid "# ddm -i pae"
@@ -330,14 +273,11 @@ msgstr "# ddm -i pae"
 
 #: en/help.html+html.body.div.p:34
 msgid ""
-"This will install the PAE kernel on multi-processor systems running a 32-bit "
-"OS. Use \"ddm -p pae\" to remove the PAE kernel from your system. Note that "
-"you cannot remove the kernel when you are currently booted into that kernel."
-msgstr ""
-"Это позволит установить pae-ядро для многопроцессорных систем под "
-"управлением 32-разрядной ОС. Использовать \"ddm -p pae\", чтобы удалить ядро "
-"pae из вашей системы. Обратите внимание, что нельзя удалить ядро, когда вы "
-"находитесь в сессии запущенной в нем в текущий момент."
+"This will install the PAE kernel on multi-processor systems running a 32-bit"
+" OS. Use \"ddm -p pae\" to remove the PAE kernel from your system. Note that"
+" you cannot remove the kernel when you are currently booted into that "
+"kernel."
+msgstr "Это позволит установить pae-ядро для многопроцессорных систем под управлением 32-разрядной ОС. Использовать \"ddm -p pae\", чтобы удалить ядро pae из вашей системы. Обратите внимание, что нельзя удалить ядро, когда вы находитесь в сессии запущенной в нем в текущий момент."
 
 #: en/help.html+html.body.div.h3:36
 msgid "# ddm -i fixbumblebee"
@@ -349,7 +289,7 @@ msgstr "Это может исправить Bumblebee."
 
 #: en/help.html+html.body.div.h2:39
 msgid "Logging"
-msgstr ""
+msgstr "Логирование"
 
 #: en/help.html+html.body.div.h3:40
 msgid "File: /var/log/ddm.log"
@@ -357,9 +297,7 @@ msgstr "File: /var/log/ddm.log"
 
 #: en/help.html+html.body.div.p:41
 msgid ""
-"Please, attach your log file when you post an issue on our forum: <a href="
-"\"http://forums.solydxk.com\" target=\"_blank\">http://forums.solydxk.com</a>"
-msgstr ""
-"Пожалуйста, прикрепите файл журнала, когда вы отправляете вопрос на нашем "
-"форуме: <a href=\"http://forums.solydxk.com\" target=\"_blank\">http://"
-"forums.solydxk.com</a>"
+"Please, attach your log file when you post an issue on our forum: <a "
+"href=\"http://forums.solydxk.com\" "
+"target=\"_blank\">http://forums.solydxk.com</a>"
+msgstr "Пожалуйста, прикрепите файл журнала, когда вы отправляете вопрос на нашем форуме: <a href=\"http://forums.solydxk.com\" target=\"_blank\">http://forums.solydxk.com</a>"
