--- a/po/sr.po
+++ b/po/sr.po
@@ -1,7 +1,7 @@
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
-#
+# 
 # Translators:
 # Slobodan Simić <slsimic@gmail.com>, 2017
 msgid ""
@@ -9,16 +9,14 @@ msgstr ""
 "Project-Id-Version: device-driver-manager\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-04-01 18:43+0200\n"
-"PO-Revision-Date: 2017-03-17 20:00+0000\n"
+"PO-Revision-Date: 2017-04-09 19:58+0000\n"
 "Last-Translator: Slobodan Simić <slsimic@gmail.com>\n"
-"Language-Team: Serbian (http://www.transifex.com/solydxk/device-driver-"
-"manager/language/sr/)\n"
-"Language: sr\n"
+"Language-Team: Serbian (http://www.transifex.com/solydxk/device-driver-manager/language/sr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
-"%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
+"Language: sr\n"
+"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 
 #: ../usr/lib/ddm/ddm.py:54 ../usr/lib/ddm/main.py:32
 #: ../usr/share/kde4/services/kcm_device_driver_manager.desktop.in.h:1
@@ -54,28 +52,17 @@ msgstr "Нема интернет везе"
 msgid ""
 "You need an internet connection to install the additional software.\n"
 "Please, connect to the internet and try again."
-msgstr ""
-"Потребна је интернет веза да бисте инсталирали додатни софтвер.\n"
-"Повежите се и покушајте поново."
+msgstr "Потребна је интернет веза да бисте инсталирали додатни софтвер.\nПовежите се и покушајте поново."
 
 #: ../usr/lib/ddm/ddm.py:187
 msgid ""
-"You have selected to install drivers from the backports repository whenever "
-"they are available.\n"
+"You have selected to install drivers from the backports repository whenever they are available.\n"
 "\n"
-"Although you can run more up to date software using the backports "
-"repository,\n"
+"Although you can run more up to date software using the backports repository,\n"
 "you introduce a greater risk of breakage doing so.\n"
 "\n"
 "Are you sure you want to continue?"
-msgstr ""
-"Изабрали сте да се драјвери инсталирају из бекпорт складишта када су "
-"доступни.\n"
-"\n"
-"Иако то омогућава да радите са новијим верзијама софтвера,\n"
-"већи је ризик да ће доћи до грешака или пуцања апликација.\n"
-"\n"
-"Заиста желите да наставите?"
+msgstr "Изабрали сте да се драјвери инсталирају из бекпорт складишта када су доступни.\n\nИако то омогућава да радите са новијим верзијама софтвера,\nвећи је ризик да ће доћи до грешака или пуцања апликација.\n\nЗаиста желите да наставите?"
 
 #: ../usr/lib/ddm/ddm.py:221
 msgid "Device"
@@ -89,9 +76,7 @@ msgstr "Уклони кернел"
 msgid ""
 "You cannot remove a booted kernel.\n"
 "Please, boot another kernel and try again."
-msgstr ""
-"Не можете уклонити кернел којим сте подигли систем.\n"
-"Подигните систем другим кернелом па покушајте поново."
+msgstr "Не можете уклонити кернел којим сте подигли систем.\nПодигните систем другим кернелом па покушајте поново."
 
 #: ../usr/lib/ddm/ddm.py:259
 msgid "Hardware scan"
@@ -111,15 +96,10 @@ msgstr "Нађена „ATI FirePro/Gl“ картица"
 
 #: ../usr/lib/ddm/ddm.py:364
 msgid ""
-"Installing the proprietary driver for an ATI FirePro/Gl card may render your "
-"system unbootable.\n"
+"Installing the proprietary driver for an ATI FirePro/Gl card may render your system unbootable.\n"
 "\n"
 "Proceed at your own risk."
-msgstr ""
-"Инсталација власничког драјвера за „ATI FirePro/Gl„ карту,\n"
-"може довести систем у стање да се не може подићи.\n"
-"\n"
-"Наставите на сопствени ризик.."
+msgstr "Инсталација власничког драјвера за „ATI FirePro/Gl„ карту,\nможе довести систем у стање да се не може подићи.\n\nНаставите на сопствени ризик.."
 
 #: ../usr/lib/ddm/ddm.py:562
 msgid "PAE capable system"
@@ -145,9 +125,7 @@ msgstr "Нема драјвера у складишту."
 msgid ""
 "Download error.\n"
 "Check your internet connection."
-msgstr ""
-"Грешка преузимања.\n"
-"Проверите интернет везу."
+msgstr "Грешка преузимања.\nПроверите интернет везу."
 
 #: ../usr/lib/ddm/ddm.py:686
 msgid "DDM cannot purge the driver."
@@ -161,21 +139,18 @@ msgstr "Ова картица није подржана."
 msgid ""
 "Cannot get the Debian version from /etc/debian_version.\n"
 "Please install the base-files package."
-msgstr ""
+msgstr "Не могу да добијем Дебијан верзију из /etc/debian_version\nИнсталирајте пакет „base-files“"
 
 #: ../usr/lib/ddm/ddm.py:692
 msgid "Could not configure Nvidia Bumblebee."
-msgstr ""
+msgstr "Не могу да подесим Nvidia Bumblebee."
 
 #: ../usr/lib/ddm/ddm.py:694
 msgid ""
 "There was an error during the installation.\n"
 "Please, run 'sudo apt-get -f install' in a terminal.\n"
 "Visit our forum for support: http://forums.solydxk.com"
-msgstr ""
-"Дошло је до грешке при инсталацији.\n"
-"Покрените 'sudo apt-get -f install' у терминалу.\n"
-"За подршку, посетите наш форум: http://forums.solydxk.com"
+msgstr "Дошло је до грешке при инсталацији.\nПокрените 'sudo apt-get -f install' у терминалу.\nЗа подршку, посетите наш форум: http://forums.solydxk.com"
 
 #: ../usr/lib/ddm/ddm.py:699
 msgid "The software has been successfully installed."
@@ -187,22 +162,16 @@ msgstr "Морате да поново покренете систем."
 
 #: ../usr/lib/ddm/main.py:33
 msgid ""
-"Device Driver Manager helps to install proprietary drivers for your "
-"hardware.\n"
+"Device Driver Manager helps to install proprietary drivers for your hardware.\n"
 "Only install proprietary drivers if you are sure you really need them.\n"
 "Usually open drivers are enough."
-msgstr ""
-"Менаџер драјвера помаже при инсталацији власничких драјвера за ваш хардвер.\n"
-"Инсталирајте власничке драјвере само ако су вам неопходни.\n"
-"Обично су слободни драјвери довољни."
+msgstr "Менаџер драјвера помаже при инсталацији власничких драјвера за ваш хардвер.\nИнсталирајте власничке драјвере само ако су вам неопходни.\nОбично су слободни драјвери довољни."
 
 #: ../usr/lib/ddm/main.py:55
 msgid ""
 "Device Driver Manager cannot be started in a live environment\n"
 "You can use the --force argument to start DDM in a live environment"
-msgstr ""
-"Менаџер драјвера се не може покренути у живом окружењу\n"
-"Можете користити аргумент --force да бисте га ипак покренули"
+msgstr "Менаџер драјвера се не може покренути у живом окружењу\nМожете користити аргумент --force да бисте га ипак покренули"
 
 #: ../usr/lib/ddm/main.py:83
 msgid "Unexpected error"
@@ -212,9 +181,7 @@ msgstr "Неочекивана грешка"
 msgid ""
 "DDM has failed with the following unexpected error. Please submit a bug "
 "report!"
-msgstr ""
-"Менаџер драјвера је омануо са следећом неочекиваном грешком. Пријавите нам "
-"је!"
+msgstr "Менаџер драјвера је омануо са следећом неочекиваном грешком. Пријавите нам је!"
 
 #: en/help.html+html.body.h1:8
 msgid "Device Driver Manager Help"
@@ -231,12 +198,7 @@ msgid ""
 "installed and allows to install the PAE kernel for multi-core 32-bit "
 "systems. The Device Driver Manager will only list those devices that are "
 "supported. It will not list any other devices then mentioned above."
-msgstr ""
-"Менаџер драјвера је алат који помаже корисницима при инсталацији власничких "
-"драјвера. Тренутно су подржани драјвери за Nvidia, ATI и Broadcom уређаје "
-"као и ПАЕ кернели за вишејезгарне 32-битне системе. Менаџер драјвера ће "
-"приказати само подржане уређаје. Не приказује друге уређаје осим горе "
-"поменуте."
+msgstr "Менаџер драјвера је алат који помаже корисницима при инсталацији власничких драјвера. Тренутно су подржани драјвери за Nvidia, ATI и Broadcom уређаје као и ПАЕ кернели за вишејезгарне 32-битне системе. Менаџер драјвера ће приказати само подржане уређаје. Не приказује друге уређаје осим горе поменуте."
 
 #: en/help.html+html.body.div.h2:13
 msgid "Important"
@@ -247,9 +209,7 @@ msgid ""
 "The Device Driver Manager can only install drivers which are available in "
 "the repositories. Make sure you have an internet connection if you want to "
 "install the drivers."
-msgstr ""
-"Менаџер драјвера може да инсталира само драјвере који су у складиштима. "
-"Проверите имате ли везу са интернетом пре инсталирања."
+msgstr "Менаџер драјвера може да инсталира само драјвере који су у складиштима. Проверите имате ли везу са интернетом пре инсталирања."
 
 #: en/help.html+html.body.div.h2:16
 msgid "Commands"
@@ -259,8 +219,7 @@ msgstr "Команде"
 msgid ""
 "If you prefer to install the drivers by terminal, you can use the following "
 "commands:"
-msgstr ""
-"Ако желите да инсталирате драјвере из терминала, употребите следеће команде:"
+msgstr "Ако желите да инсталирате драјвере из терминала, употребите следеће команде:"
 
 #: en/help.html+html.body.div.h3:21
 msgid "# ddm -i ati"
@@ -272,11 +231,7 @@ msgid ""
 "from version HD 5000 and up are supported by the fglrx drivers. Versions "
 "between 1000 and 5000 will use the Radeon drivers. Use \"ddm -p ati\" to "
 "remove the drivers from your system."
-msgstr ""
-"Ово ће инсталирати „fglrx“ драјвере за вашу ATI графичку карту. ATI карте од "
-"верзије HD 5000 и навише су подржане „fglrx“ драјверима. Верзије од 1000 до "
-"5000 користиће Radeon драјвере. Користите „ddm -p ati“ да уклоните драјвере "
-"са система."
+msgstr "Ово ће инсталирати „fglrx“ драјвере за вашу ATI графичку карту. ATI карте од верзије HD 5000 и навише су подржане „fglrx“ драјверима. Верзије од 1000 до 5000 користиће Radeon драјвере. Користите „ddm -p ati“ да уклоните драјвере са система."
 
 #: en/help.html+html.body.div.h3:24
 msgid "# ddm -i nvidia"
@@ -285,12 +240,9 @@ msgstr "# ddm -i nvidia"
 #: en/help.html+html.body.div.p:25
 msgid ""
 "This will select the right drivers for your Nvidia graphical card. It will "
-"select the Bumblebee drivers in case you have a hybrid card (both Nvidia and "
-"Intel). Use \"ddm -p nvidia\" to remove the drivers from your system."
-msgstr ""
-"Ово ће изабрати праве драјвере за вашу Nvidia графичку карту. Изабраће "
-"„Bumblebee“ драјвере у случају да имате хибридну картицу (Nvidia или Intel). "
-"Користите „ddm -p nvidia“ да уклоните драјвере са система."
+"select the Bumblebee drivers in case you have a hybrid card (both Nvidia and"
+" Intel). Use \"ddm -p nvidia\" to remove the drivers from your system."
+msgstr "Ово ће изабрати праве драјвере за вашу Nvidia графичку карту. Изабраће „Bumblebee“ драјвере у случају да имате хибридну картицу (Nvidia или Intel). Користите „ddm -p nvidia“ да уклоните драјвере са система."
 
 #: en/help.html+html.body.div.h3:27
 msgid "# ddm -i open"
@@ -300,9 +252,7 @@ msgstr "# ddm -i open"
 msgid ""
 "You can use this command if you want to revert back to the open Nouveau "
 "drivers. It will remove any proprietary drivers from your system."
-msgstr ""
-"Ову команду можете користити ако желите да се вратите на слободне „Nouveau“ "
-"драјвере. Уклониће све власничке драјвере са система."
+msgstr "Ову команду можете користити ако желите да се вратите на слободне „Nouveau“ драјвере. Уклониће све власничке драјвере са система."
 
 #: en/help.html+html.body.div.h3:30
 msgid "# ddm -i broadcom"
@@ -312,9 +262,7 @@ msgstr "# ddm -i broadcom"
 msgid ""
 "This command will install the right driver for your wireless Broadcom "
 "adapter. Use \"ddm -p broadcom\" to remove the drivers from your system."
-msgstr ""
-"Ово ће изабрати праве драјвере за ваш Broadcom adapter. Користите „ddm -p "
-"broadcom“ да уклоните драјвере са система."
+msgstr "Ово ће изабрати праве драјвере за ваш Broadcom adapter. Користите „ddm -p broadcom“ да уклоните драјвере са система."
 
 #: en/help.html+html.body.div.h3:33
 msgid "# ddm -i pae"
@@ -322,13 +270,11 @@ msgstr "# ddm -i pae"
 
 #: en/help.html+html.body.div.p:34
 msgid ""
-"This will install the PAE kernel on multi-processor systems running a 32-bit "
-"OS. Use \"ddm -p pae\" to remove the PAE kernel from your system. Note that "
-"you cannot remove the kernel when you are currently booted into that kernel."
-msgstr ""
-"Ово инсталира ПАЕ кернел на 32-битне системе са вишејезгарним процесором. "
-"Користите „ddm -p pae“ да уклоните ПАЕ кернел. Обратите пажњу да не можете "
-"уклонити кернел са којим сте тренутно подигли систем."
+"This will install the PAE kernel on multi-processor systems running a 32-bit"
+" OS. Use \"ddm -p pae\" to remove the PAE kernel from your system. Note that"
+" you cannot remove the kernel when you are currently booted into that "
+"kernel."
+msgstr "Ово инсталира ПАЕ кернел на 32-битне системе са вишејезгарним процесором. Користите „ddm -p pae“ да уклоните ПАЕ кернел. Обратите пажњу да не можете уклонити кернел са којим сте тренутно подигли систем."
 
 #: en/help.html+html.body.div.h3:36
 msgid "# ddm -i fixbumblebee"
@@ -340,7 +286,7 @@ msgstr "Ово покушава да среди „Bumblebee“ инсталац
 
 #: en/help.html+html.body.div.h2:39
 msgid "Logging"
-msgstr ""
+msgstr "Дневник"
 
 #: en/help.html+html.body.div.h3:40
 msgid "File: /var/log/ddm.log"
@@ -348,8 +294,7 @@ msgstr "Фајл: /var/log/ddm.log"
 
 #: en/help.html+html.body.div.p:41
 msgid ""
-"Please, attach your log file when you post an issue on our forum: <a href="
-"\"http://forums.solydxk.com\" target=\"_blank\">http://forums.solydxk.com</a>"
-msgstr ""
-"Приложите и фајл дневника када постављате проблем на форуму: <a href="
-"\"http://forums.solydxk.com\" target=\"_blank\">http://forums.solydxk.com</a>"
+"Please, attach your log file when you post an issue on our forum: <a "
+"href=\"http://forums.solydxk.com\" "
+"target=\"_blank\">http://forums.solydxk.com</a>"
+msgstr "Приложите и фајл дневника када постављате проблем на форуму: <a href=\"http://forums.solydxk.com\" target=\"_blank\">http://forums.solydxk.com</a>"
