--- a/po/ar.po
+++ b/po/ar.po
@@ -1,7 +1,7 @@
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
-#
+# 
 # Translators:
 # Abdelkarim Guettaf <gkraim@gmail.com>, 2015
 # kraim <biskraim@gmail.com>, 2016
@@ -10,16 +10,14 @@ msgstr ""
 "Project-Id-Version: device-driver-manager\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-04-01 18:43+0200\n"
-"PO-Revision-Date: 2016-01-19 19:24+0000\n"
-"Last-Translator: kraim <biskraim@gmail.com>\n"
-"Language-Team: Arabic (http://www.transifex.com/solydxk/device-driver-"
-"manager/language/ar/)\n"
-"Language: ar\n"
+"PO-Revision-Date: 2017-04-09 09:18+0000\n"
+"Last-Translator: Arjen Balfoort <arjenbalfoort@solydxk.com>\n"
+"Language-Team: Arabic (http://www.transifex.com/solydxk/device-driver-manager/language/ar/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=6; plural=n==0 ? 0 : n==1 ? 1 : n==2 ? 2 : n%100>=3 "
-"&& n%100<=10 ? 3 : n%100>=11 && n%100<=99 ? 4 : 5;\n"
+"Language: ar\n"
+"Plural-Forms: nplurals=6; plural=n==0 ? 0 : n==1 ? 1 : n==2 ? 2 : n%100>=3 && n%100<=10 ? 3 : n%100>=11 && n%100<=99 ? 4 : 5;\n"
 
 #: ../usr/lib/ddm/ddm.py:54 ../usr/lib/ddm/main.py:32
 #: ../usr/share/kde4/services/kcm_device_driver_manager.desktop.in.h:1
@@ -55,27 +53,17 @@ msgstr "لا يوجد اتصال بالإنترنت"
 msgid ""
 "You need an internet connection to install the additional software.\n"
 "Please, connect to the internet and try again."
-msgstr ""
-"تحتاج لاتصال بالإنترنت لتثبيت البرامج الإضافية.\n"
-"من فضلك، اتّصل بالإنترنت وحاول مرة أخرى."
+msgstr "تحتاج لاتصال بالإنترنت لتثبيت البرامج الإضافية.\nمن فضلك، اتّصل بالإنترنت وحاول مرة أخرى."
 
 #: ../usr/lib/ddm/ddm.py:187
 msgid ""
-"You have selected to install drivers from the backports repository whenever "
-"they are available.\n"
+"You have selected to install drivers from the backports repository whenever they are available.\n"
 "\n"
-"Although you can run more up to date software using the backports "
-"repository,\n"
+"Although you can run more up to date software using the backports repository,\n"
 "you introduce a greater risk of breakage doing so.\n"
 "\n"
 "Are you sure you want to continue?"
-msgstr ""
-"لقد قمت بتحديد تثبيت التعريفات من مستودع باكبورتس متى توفرت.\n"
-"\n"
-"رغم أنه يمكنك تشغيل برامج أكثر حداثة باستخدام مستودع باكبورتس\n"
-"إلّا أنه قد تزيد من إحتمالية وقوع النظام بفعل ذلك.\n"
-"\n"
-"هل أنت متأكد أنك تريد المتابعة؟"
+msgstr "لقد قمت بتحديد تثبيت التعريفات من مستودع باكبورتس متى توفرت.\n\nرغم أنه يمكنك تشغيل برامج أكثر حداثة باستخدام مستودع باكبورتس\nإلّا أنه قد تزيد من إحتمالية وقوع النظام بفعل ذلك.\n\nهل أنت متأكد أنك تريد المتابعة؟"
 
 #: ../usr/lib/ddm/ddm.py:221
 msgid "Device"
@@ -89,9 +77,7 @@ msgstr "إزالة النواة"
 msgid ""
 "You cannot remove a booted kernel.\n"
 "Please, boot another kernel and try again."
-msgstr ""
-"لا يمكنك إزالة النواة المستخدمة حاليا.\n"
-"من فضلك، حاول بعد إعادة التشغيل بنواة أخرى."
+msgstr "لا يمكنك إزالة النواة المستخدمة حاليا.\nمن فضلك، حاول بعد إعادة التشغيل بنواة أخرى."
 
 #: ../usr/lib/ddm/ddm.py:259
 msgid "Hardware scan"
@@ -111,15 +97,10 @@ msgstr "وجِدت بطاقة ATI FirePro/Gl"
 
 #: ../usr/lib/ddm/ddm.py:364
 msgid ""
-"Installing the proprietary driver for an ATI FirePro/Gl card may render your "
-"system unbootable.\n"
+"Installing the proprietary driver for an ATI FirePro/Gl card may render your system unbootable.\n"
 "\n"
 "Proceed at your own risk."
-msgstr ""
-"تثبيت التعريف المغلق الخاص ببطاقة ATI FirePro/Gl قد يجعل نظامك غير قابل "
-"للإقلاع.\n"
-"\n"
-"المتابعة على مسؤوليتك."
+msgstr "تثبيت التعريف المغلق الخاص ببطاقة ATI FirePro/Gl قد يجعل نظامك غير قابل للإقلاع.\n\nالمتابعة على مسؤوليتك."
 
 #: ../usr/lib/ddm/ddm.py:562
 msgid "PAE capable system"
@@ -145,9 +126,7 @@ msgstr "تعذّر العثور على تعريف في المستودع"
 msgid ""
 "Download error.\n"
 "Check your internet connection."
-msgstr ""
-"خطأ في التنزيل.\n"
-"تحقق من اتصال الإنترنت الخاص بك."
+msgstr "خطأ في التنزيل.\nتحقق من اتصال الإنترنت الخاص بك."
 
 #: ../usr/lib/ddm/ddm.py:686
 msgid "DDM cannot purge the driver."
@@ -172,10 +151,7 @@ msgid ""
 "There was an error during the installation.\n"
 "Please, run 'sudo apt-get -f install' in a terminal.\n"
 "Visit our forum for support: http://forums.solydxk.com"
-msgstr ""
-"حدث خطأ أثناء التثبيت.\n"
-"من فضلك، شغّل 'sudo apt-get -f install' على الطرفية.\n"
-"يمكنك زيارة منتدانا للحصول على الدعم: http://forums.solydxk.com"
+msgstr "حدث خطأ أثناء التثبيت.\nمن فضلك، شغّل 'sudo apt-get -f install' على الطرفية.\nيمكنك زيارة منتدانا للحصول على الدعم: http://forums.solydxk.com"
 
 #: ../usr/lib/ddm/ddm.py:699
 msgid "The software has been successfully installed."
@@ -187,22 +163,16 @@ msgstr "ستحتاج لإعادة تشغيل نظامك."
 
 #: ../usr/lib/ddm/main.py:33
 msgid ""
-"Device Driver Manager helps to install proprietary drivers for your "
-"hardware.\n"
+"Device Driver Manager helps to install proprietary drivers for your hardware.\n"
 "Only install proprietary drivers if you are sure you really need them.\n"
 "Usually open drivers are enough."
-msgstr ""
-"يساعدك مدير تعريف الأجهزة على تثبيت التعريف الخاص بالمصنع لعتادك.\n"
-"ثبّت التعريف الخاص بالمصنع فقط إذا كنت متأكد من حاجتك له.\n"
-"غالبا ما يكون التعريف المفتوح كافيا."
+msgstr "يساعدك مدير تعريف الأجهزة على تثبيت التعريف الخاص بالمصنع لعتادك.\nثبّت التعريف الخاص بالمصنع فقط إذا كنت متأكد من حاجتك له.\nغالبا ما يكون التعريف المفتوح كافيا."
 
 #: ../usr/lib/ddm/main.py:55
 msgid ""
 "Device Driver Manager cannot be started in a live environment\n"
 "You can use the --force argument to start DDM in a live environment"
-msgstr ""
-"لا يمكن تشغيل مدير تعريف الأجهزة في بيئة حية\n"
-"يمكنك استخدام المعامل --force لبدء DDM في بيئة حية"
+msgstr "لا يمكن تشغيل مدير تعريف الأجهزة في بيئة حية\nيمكنك استخدام المعامل --force لبدء DDM في بيئة حية"
 
 #: ../usr/lib/ddm/main.py:83
 msgid "Unexpected error"
@@ -212,9 +182,7 @@ msgstr "خطأ غير متوقع"
 msgid ""
 "DDM has failed with the following unexpected error. Please submit a bug "
 "report!"
-msgstr ""
-"فشل مدير تعريف الأجهزة مع الخطأ غير المتوقع التالي. يرجى تقديم تقرير عن وجود "
-"علّة!"
+msgstr "فشل مدير تعريف الأجهزة مع الخطأ غير المتوقع التالي. يرجى تقديم تقرير عن وجود علّة!"
 
 #: en/help.html+html.body.h1:8
 msgid "Device Driver Manager Help"
@@ -231,12 +199,7 @@ msgid ""
 "installed and allows to install the PAE kernel for multi-core 32-bit "
 "systems. The Device Driver Manager will only list those devices that are "
 "supported. It will not list any other devices then mentioned above."
-msgstr ""
-"مدير تعريف الأجهزة هو أداة لمساعدة المستخدمين على تثبيت تعريفات الأجهزة "
-"الخاصة بالمصنع. حاليا يسمح بتثبيت تعريفات ATI ،Nvidia وBroadcom كما يسمح "
-"بتثبيت النواة مع ملحق PAE للأنظمة متعددة الأنوية على معمارية 32 بت. يقوم "
-"مدير تعريف الأجهزة بعرض الأجهزة التي يدعمها فقط. لذا لن يدرج أيّة أجهزة أخرى "
-"غير المذكورة أعلاه."
+msgstr "مدير تعريف الأجهزة هو أداة لمساعدة المستخدمين على تثبيت تعريفات الأجهزة الخاصة بالمصنع. حاليا يسمح بتثبيت تعريفات ATI ،Nvidia وBroadcom كما يسمح بتثبيت النواة مع ملحق PAE للأنظمة متعددة الأنوية على معمارية 32 بت. يقوم مدير تعريف الأجهزة بعرض الأجهزة التي يدعمها فقط. لذا لن يدرج أيّة أجهزة أخرى غير المذكورة أعلاه."
 
 #: en/help.html+html.body.div.h2:13
 msgid "Important"
@@ -247,9 +210,7 @@ msgid ""
 "The Device Driver Manager can only install drivers which are available in "
 "the repositories. Make sure you have an internet connection if you want to "
 "install the drivers."
-msgstr ""
-"يمكن لمدير تعريف الأجهزة أن يثبت التعريفات المتوفرة بالمستودعات فقط. تأكد أن "
-"لديك اتصالا بالإنترنت إذا كنت تريد تثبيت التعريفات."
+msgstr "يمكن لمدير تعريف الأجهزة أن يثبت التعريفات المتوفرة بالمستودعات فقط. تأكد أن لديك اتصالا بالإنترنت إذا كنت تريد تثبيت التعريفات."
 
 #: en/help.html+html.body.div.h2:16
 msgid "Commands"
@@ -259,8 +220,7 @@ msgstr "تعليمات"
 msgid ""
 "If you prefer to install the drivers by terminal, you can use the following "
 "commands:"
-msgstr ""
-"إذا كنت تفضل تثبيت التعريفات عبر الطرفية يمكنك استخدام التعليمات التالية:"
+msgstr "إذا كنت تفضل تثبيت التعريفات عبر الطرفية يمكنك استخدام التعليمات التالية:"
 
 #: en/help.html+html.body.div.h3:21
 msgid "# ddm -i ati"
@@ -272,10 +232,7 @@ msgid ""
 "from version HD 5000 and up are supported by the fglrx drivers. Versions "
 "between 1000 and 5000 will use the Radeon drivers. Use \"ddm -p ati\" to "
 "remove the drivers from your system."
-msgstr ""
-"هذا سيثبت تعريفات fglrx لبطاقة ATI الخاصة بك. بطاقات ATI من الإصدار HD 5000 "
-"فما فوق مدعومة من طرف تعريف fglrx. الإصدارات من 1000 إلى 5000 ستستخدم "
-"تعريفات Radeon. استخدم \"ddm -p ati\" لإزالة التعريف من نظامك."
+msgstr "هذا سيثبت تعريفات fglrx لبطاقة ATI الخاصة بك. بطاقات ATI من الإصدار HD 5000 فما فوق مدعومة من طرف تعريف fglrx. الإصدارات من 1000 إلى 5000 ستستخدم تعريفات Radeon. استخدم \"ddm -p ati\" لإزالة التعريف من نظامك."
 
 #: en/help.html+html.body.div.h3:24
 msgid "# ddm -i nvidia"
@@ -284,12 +241,9 @@ msgstr "# ddm -i nvidia"
 #: en/help.html+html.body.div.p:25
 msgid ""
 "This will select the right drivers for your Nvidia graphical card. It will "
-"select the Bumblebee drivers in case you have a hybrid card (both Nvidia and "
-"Intel). Use \"ddm -p nvidia\" to remove the drivers from your system."
-msgstr ""
-"سيؤدي هذا إلى تحديد التعريف الصحيح لبطاقة الرسوميات أنفيديا الخاصة بك. "
-"وسيقوم بتحديد تعريف Bumblebee في حال ما إذا كانت لديك بطاقة رسومية هجينة "
-"(أنفيديا و إنتل معا). استخدم \"ddm -p nvidia\" لإزالة التعريف من نظامك."
+"select the Bumblebee drivers in case you have a hybrid card (both Nvidia and"
+" Intel). Use \"ddm -p nvidia\" to remove the drivers from your system."
+msgstr "سيؤدي هذا إلى تحديد التعريف الصحيح لبطاقة الرسوميات أنفيديا الخاصة بك. وسيقوم بتحديد تعريف Bumblebee في حال ما إذا كانت لديك بطاقة رسومية هجينة (أنفيديا و إنتل معا). استخدم \"ddm -p nvidia\" لإزالة التعريف من نظامك."
 
 #: en/help.html+html.body.div.h3:27
 msgid "# ddm -i open"
@@ -299,9 +253,7 @@ msgstr "# ddm -i open"
 msgid ""
 "You can use this command if you want to revert back to the open Nouveau "
 "drivers. It will remove any proprietary drivers from your system."
-msgstr ""
-"يمكنك إستخدام هذه التعليمة إذا أردت العودة إلى التعريف المفتوح (Nouveau). "
-"هذا سيزيل أي تعريف خاص بالمصنع من نظامك."
+msgstr "يمكنك إستخدام هذه التعليمة إذا أردت العودة إلى التعريف المفتوح (Nouveau). هذا سيزيل أي تعريف خاص بالمصنع من نظامك."
 
 #: en/help.html+html.body.div.h3:30
 msgid "# ddm -i broadcom"
@@ -311,9 +263,7 @@ msgstr "# ddm -i broadcom"
 msgid ""
 "This command will install the right driver for your wireless Broadcom "
 "adapter. Use \"ddm -p broadcom\" to remove the drivers from your system."
-msgstr ""
-"هذا الأمر سيقوم بتثبيت التعريف المناسب لبطاقة الشبكة اللاسلكية Broadcom "
-"الخاصة بك. استخدم \"ddm -p broadcom\" لإزالة التعريف من نظامك."
+msgstr "هذا الأمر سيقوم بتثبيت التعريف المناسب لبطاقة الشبكة اللاسلكية Broadcom الخاصة بك. استخدم \"ddm -p broadcom\" لإزالة التعريف من نظامك."
 
 #: en/help.html+html.body.div.h3:33
 msgid "# ddm -i pae"
@@ -321,13 +271,11 @@ msgstr "# ddm -i pae"
 
 #: en/help.html+html.body.div.p:34
 msgid ""
-"This will install the PAE kernel on multi-processor systems running a 32-bit "
-"OS. Use \"ddm -p pae\" to remove the PAE kernel from your system. Note that "
-"you cannot remove the kernel when you are currently booted into that kernel."
-msgstr ""
-"سيقوم هذا بتثبيت نواة PAE للأنظمة متعددة الأنوية على معمارية 32 بتاستخدم "
-"\"ddm -p pae\" لإزالة نواة PAE من نظامك. لاحظ أنه لا يمكن حذف هذه النواة إذا "
-"كنت حاليا قد أقلعت باستخدامها."
+"This will install the PAE kernel on multi-processor systems running a 32-bit"
+" OS. Use \"ddm -p pae\" to remove the PAE kernel from your system. Note that"
+" you cannot remove the kernel when you are currently booted into that "
+"kernel."
+msgstr "سيقوم هذا بتثبيت نواة PAE للأنظمة متعددة الأنوية على معمارية 32 بتاستخدم \"ddm -p pae\" لإزالة نواة PAE من نظامك. لاحظ أنه لا يمكن حذف هذه النواة إذا كنت حاليا قد أقلعت باستخدامها."
 
 #: en/help.html+html.body.div.h3:36
 msgid "# ddm -i fixbumblebee"
@@ -347,8 +295,7 @@ msgstr "الملف: /var/log/ddm.log"
 
 #: en/help.html+html.body.div.p:41
 msgid ""
-"Please, attach your log file when you post an issue on our forum: <a href="
-"\"http://forums.solydxk.com\" target=\"_blank\">http://forums.solydxk.com</a>"
-msgstr ""
-"يرجى إرفاق ملف السجل الخاص بك عند إضافة مشكلة على منتدانا: <a href=\"http://"
-"forums.solydxk.com\" target=\"_blank\">http://forums.solydxk.com</a>"
+"Please, attach your log file when you post an issue on our forum: <a "
+"href=\"http://forums.solydxk.com\" "
+"target=\"_blank\">http://forums.solydxk.com</a>"
+msgstr "يرجى إرفاق ملف السجل الخاص بك عند إضافة مشكلة على منتدانا: <a href=\"http://forums.solydxk.com\" target=\"_blank\">http://forums.solydxk.com</a>"
