--- a/po/ca.po
+++ b/po/ca.po
@@ -1,7 +1,7 @@
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
-#
+# 
 # Translators:
 # Eduard Selma <selma@tinet.cat>, 2015
 # root <arjenbalfoort@solydxk.com>, 2015
@@ -10,14 +10,13 @@ msgstr ""
 "Project-Id-Version: device-driver-manager\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-04-01 18:43+0200\n"
-"PO-Revision-Date: 2015-11-07 16:52+0000\n"
-"Last-Translator: Eduard Selma <selma@tinet.cat>\n"
-"Language-Team: Catalan (http://www.transifex.com/solydxk/device-driver-"
-"manager/language/ca/)\n"
-"Language: ca\n"
+"PO-Revision-Date: 2017-04-09 09:18+0000\n"
+"Last-Translator: Arjen Balfoort <arjenbalfoort@solydxk.com>\n"
+"Language-Team: Catalan (http://www.transifex.com/solydxk/device-driver-manager/language/ca/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Language: ca\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #: ../usr/lib/ddm/ddm.py:54 ../usr/lib/ddm/main.py:32
@@ -54,29 +53,17 @@ msgstr "No hi ha connexió a Internet "
 msgid ""
 "You need an internet connection to install the additional software.\n"
 "Please, connect to the internet and try again."
-msgstr ""
-"Cal una connexió a Internet per instal·lar el programari addicional.\n"
-"Si us plau, connecteu-vos a Internet i torneu a provar-ho."
+msgstr "Cal una connexió a Internet per instal·lar el programari addicional.\nSi us plau, connecteu-vos a Internet i torneu a provar-ho."
 
 #: ../usr/lib/ddm/ddm.py:187
 msgid ""
-"You have selected to install drivers from the backports repository whenever "
-"they are available.\n"
+"You have selected to install drivers from the backports repository whenever they are available.\n"
 "\n"
-"Although you can run more up to date software using the backports "
-"repository,\n"
+"Although you can run more up to date software using the backports repository,\n"
 "you introduce a greater risk of breakage doing so.\n"
 "\n"
 "Are you sure you want to continue?"
-msgstr ""
-"Heu triat  instal·lar controladors del dipòsit backports si aquests estan a "
-"l'abast.\n"
-"\n"
-"Malgrat que podeu obtenir programari més actual usant el dipòsit  "
-"backports,\n"
-"hi ha més risc de tenir algun problema fent-ho.\n"
-"\n"
-"Esteu segurs de voler continuar?"
+msgstr "Heu triat  instal·lar controladors del dipòsit backports si aquests estan a l'abast.\n\nMalgrat que podeu obtenir programari més actual usant el dipòsit  backports,\nhi ha més risc de tenir algun problema fent-ho.\n\nEsteu segurs de voler continuar?"
 
 #: ../usr/lib/ddm/ddm.py:221
 msgid "Device"
@@ -90,9 +77,7 @@ msgstr "Elimina el kernel "
 msgid ""
 "You cannot remove a booted kernel.\n"
 "Please, boot another kernel and try again."
-msgstr ""
-"No es pot eliminar un kernel actiu.\n"
-"Si us plau, engegueu amb un nou kernel i torneu a provar-ho. "
+msgstr "No es pot eliminar un kernel actiu.\nSi us plau, engegueu amb un nou kernel i torneu a provar-ho. "
 
 #: ../usr/lib/ddm/ddm.py:259
 msgid "Hardware scan"
@@ -112,15 +97,10 @@ msgstr "S'ha trobat una tarja ATI FirePro/Gl "
 
 #: ../usr/lib/ddm/ddm.py:364
 msgid ""
-"Installing the proprietary driver for an ATI FirePro/Gl card may render your "
-"system unbootable.\n"
+"Installing the proprietary driver for an ATI FirePro/Gl card may render your system unbootable.\n"
 "\n"
 "Proceed at your own risk."
-msgstr ""
-"Instal·lar el controlador propietari per a la tarja ATI FirePro/Gl pot "
-"deixar el vostre sistema sense possibilitat d'arrencar.\n"
-"\n"
-"Procediu sota la vostra responsabilitat."
+msgstr "Instal·lar el controlador propietari per a la tarja ATI FirePro/Gl pot deixar el vostre sistema sense possibilitat d'arrencar.\n\nProcediu sota la vostra responsabilitat."
 
 #: ../usr/lib/ddm/ddm.py:562
 msgid "PAE capable system"
@@ -146,9 +126,7 @@ msgstr "No es troba el controlador al dipòsit. "
 msgid ""
 "Download error.\n"
 "Check your internet connection."
-msgstr ""
-"Error de descàrrega.\n"
-"Comproveu la connexió a Internet. "
+msgstr "Error de descàrrega.\nComproveu la connexió a Internet. "
 
 #: ../usr/lib/ddm/ddm.py:686
 msgid "DDM cannot purge the driver."
@@ -173,10 +151,7 @@ msgid ""
 "There was an error during the installation.\n"
 "Please, run 'sudo apt-get -f install' in a terminal.\n"
 "Visit our forum for support: http://forums.solydxk.com"
-msgstr ""
-"Hi ha hagut un error a la instal·lació.\n"
-"Si us plau, executeu 'sudo apt-get -f install' en un terminal.\n"
-"Visiteu el nostre fòrum per obtenir suport: http://forums.solydyxk.com "
+msgstr "Hi ha hagut un error a la instal·lació.\nSi us plau, executeu 'sudo apt-get -f install' en un terminal.\nVisiteu el nostre fòrum per obtenir suport: http://forums.solydyxk.com "
 
 #: ../usr/lib/ddm/ddm.py:699
 msgid "The software has been successfully installed."
@@ -188,24 +163,16 @@ msgstr "Cal que reinicieu el vostre sistema. "
 
 #: ../usr/lib/ddm/main.py:33
 msgid ""
-"Device Driver Manager helps to install proprietary drivers for your "
-"hardware.\n"
+"Device Driver Manager helps to install proprietary drivers for your hardware.\n"
 "Only install proprietary drivers if you are sure you really need them.\n"
 "Usually open drivers are enough."
-msgstr ""
-"El Device Driver Manager us ajuda a instal·lar controladors propietaris per "
-"al vostre maquinari.\n"
-"Instal·leu controladors propietaris només si esteu segurs de necessitar-"
-"los.\n"
-"Sovint, amb els controladors lliures ja n'hi ha prou."
+msgstr "El Device Driver Manager us ajuda a instal·lar controladors propietaris per al vostre maquinari.\nInstal·leu controladors propietaris només si esteu segurs de necessitar-los.\nSovint, amb els controladors lliures ja n'hi ha prou."
 
 #: ../usr/lib/ddm/main.py:55
 msgid ""
 "Device Driver Manager cannot be started in a live environment\n"
 "You can use the --force argument to start DDM in a live environment"
-msgstr ""
-"No es pot engegar Device Driver Manager en un entorn autònom.\n"
-"Podeu usar l'argument --force per engegar-lo en entorn autònom."
+msgstr "No es pot engegar Device Driver Manager en un entorn autònom.\nPodeu usar l'argument --force per engegar-lo en entorn autònom."
 
 #: ../usr/lib/ddm/main.py:83
 msgid "Unexpected error"
@@ -215,8 +182,7 @@ msgstr "Error inesperat "
 msgid ""
 "DDM has failed with the following unexpected error. Please submit a bug "
 "report!"
-msgstr ""
-"DDM ha fallat amb un error inesperat. Si us plau, envieu un informe d'error! "
+msgstr "DDM ha fallat amb un error inesperat. Si us plau, envieu un informe d'error! "
 
 #: en/help.html+html.body.h1:8
 msgid "Device Driver Manager Help"
@@ -233,13 +199,7 @@ msgid ""
 "installed and allows to install the PAE kernel for multi-core 32-bit "
 "systems. The Device Driver Manager will only list those devices that are "
 "supported. It will not list any other devices then mentioned above."
-msgstr ""
-"The Device Driver Manager és una eina per ajudar als usuaris a instal·lar "
-"controladors de dispositiu de tercers. Actualment es poden instal·lar "
-"controladors Nvidia, ATI i Broadcom; també permet instal·lar el kernel PAE "
-"per sistemes de 32 bits amb diversos nuclis. El Device Driver Manager només "
-"mostrarà els dispositius compatibles. No mostrarà altres dispositius que els "
-"abans esmentats."
+msgstr "The Device Driver Manager és una eina per ajudar als usuaris a instal·lar controladors de dispositiu de tercers. Actualment es poden instal·lar controladors Nvidia, ATI i Broadcom; també permet instal·lar el kernel PAE per sistemes de 32 bits amb diversos nuclis. El Device Driver Manager només mostrarà els dispositius compatibles. No mostrarà altres dispositius que els abans esmentats."
 
 #: en/help.html+html.body.div.h2:13
 msgid "Important"
@@ -250,10 +210,7 @@ msgid ""
 "The Device Driver Manager can only install drivers which are available in "
 "the repositories. Make sure you have an internet connection if you want to "
 "install the drivers."
-msgstr ""
-"El Device Driver Manager només instal·larà controladors disponibles als "
-"dipòsits. Assegureu-vos que teniu connexió a Internet si voleu instal·lar "
-"els controladors. "
+msgstr "El Device Driver Manager només instal·larà controladors disponibles als dipòsits. Assegureu-vos que teniu connexió a Internet si voleu instal·lar els controladors. "
 
 #: en/help.html+html.body.div.h2:16
 msgid "Commands"
@@ -263,9 +220,7 @@ msgstr "Ordres "
 msgid ""
 "If you prefer to install the drivers by terminal, you can use the following "
 "commands:"
-msgstr ""
-"Si preferiu instal·lar els controladors des del terminal, podeu usar "
-"aquestes ordres: "
+msgstr "Si preferiu instal·lar els controladors des del terminal, podeu usar aquestes ordres: "
 
 #: en/help.html+html.body.div.h3:21
 msgid "# ddm -i ati"
@@ -277,12 +232,7 @@ msgid ""
 "from version HD 5000 and up are supported by the fglrx drivers. Versions "
 "between 1000 and 5000 will use the Radeon drivers. Use \"ddm -p ati\" to "
 "remove the drivers from your system."
-msgstr ""
-"Això instal·larà els controladors fglrx per les targes gràfiques ATI. Les "
-"targes ATI a partir de la versió HD 5000 són compatibles amb els "
-"controladors fglrx. Les versions entre la 1000 i la 5000 poden usar els "
-"controladors Radeon. Useu \"ddm -p ati\" per eliminar els controladors del "
-"vostre sistema. "
+msgstr "Això instal·larà els controladors fglrx per les targes gràfiques ATI. Les targes ATI a partir de la versió HD 5000 són compatibles amb els controladors fglrx. Les versions entre la 1000 i la 5000 poden usar els controladors Radeon. Useu \"ddm -p ati\" per eliminar els controladors del vostre sistema. "
 
 #: en/help.html+html.body.div.h3:24
 msgid "# ddm -i nvidia"
@@ -291,13 +241,9 @@ msgstr "# ddm -i nvidia"
 #: en/help.html+html.body.div.p:25
 msgid ""
 "This will select the right drivers for your Nvidia graphical card. It will "
-"select the Bumblebee drivers in case you have a hybrid card (both Nvidia and "
-"Intel). Use \"ddm -p nvidia\" to remove the drivers from your system."
-msgstr ""
-"Això triarà els controladors correctes per a la vostra tarja gràfica Nvidia. "
-"També seleccionarà els controladors Bumblebee en el cas que tingueu una "
-"tarja híbrida (amb Nvidia i Intel). Useu \"ddm -p nvidia\" per eliminar els "
-"controladors del vostre sistema. "
+"select the Bumblebee drivers in case you have a hybrid card (both Nvidia and"
+" Intel). Use \"ddm -p nvidia\" to remove the drivers from your system."
+msgstr "Això triarà els controladors correctes per a la vostra tarja gràfica Nvidia. També seleccionarà els controladors Bumblebee en el cas que tingueu una tarja híbrida (amb Nvidia i Intel). Useu \"ddm -p nvidia\" per eliminar els controladors del vostre sistema. "
 
 #: en/help.html+html.body.div.h3:27
 msgid "# ddm -i open"
@@ -307,9 +253,7 @@ msgstr "# ddm -i open"
 msgid ""
 "You can use this command if you want to revert back to the open Nouveau "
 "drivers. It will remove any proprietary drivers from your system."
-msgstr ""
-"Podeu usar aquesta ordre per a reinstal·lar els controladors lliures "
-"Nouveau. Això eliminarà els controladors propietaris del vostre sistema. "
+msgstr "Podeu usar aquesta ordre per a reinstal·lar els controladors lliures Nouveau. Això eliminarà els controladors propietaris del vostre sistema. "
 
 #: en/help.html+html.body.div.h3:30
 msgid "# ddm -i broadcom"
@@ -319,10 +263,7 @@ msgstr "# ddm -i broadcom"
 msgid ""
 "This command will install the right driver for your wireless Broadcom "
 "adapter. Use \"ddm -p broadcom\" to remove the drivers from your system."
-msgstr ""
-"Aquesta ordre instal·larà el controlador adequat per al vostre adaptador "
-"sense fils Broadcom. Useu \"ddm -p broadcom\" per eliminar aquests "
-"controladors del vostre sistema. "
+msgstr "Aquesta ordre instal·larà el controlador adequat per al vostre adaptador sense fils Broadcom. Useu \"ddm -p broadcom\" per eliminar aquests controladors del vostre sistema. "
 
 #: en/help.html+html.body.div.h3:33
 msgid "# ddm -i pae"
@@ -330,14 +271,11 @@ msgstr "# ddm -i pae"
 
 #: en/help.html+html.body.div.p:34
 msgid ""
-"This will install the PAE kernel on multi-processor systems running a 32-bit "
-"OS. Use \"ddm -p pae\" to remove the PAE kernel from your system. Note that "
-"you cannot remove the kernel when you are currently booted into that kernel."
-msgstr ""
-"Això instal·larà el nucli (kernel) PAE en sistemes multiprocessador amb S. "
-"O. de 32 bit. Useu \"ddm -p pae\" per eliminar el kernel PAE del vostre "
-"sistema. Tingueu en compte que no es pot eliminar el nucli que s'està "
-"executant en aquell moment. "
+"This will install the PAE kernel on multi-processor systems running a 32-bit"
+" OS. Use \"ddm -p pae\" to remove the PAE kernel from your system. Note that"
+" you cannot remove the kernel when you are currently booted into that "
+"kernel."
+msgstr "Això instal·larà el nucli (kernel) PAE en sistemes multiprocessador amb S. O. de 32 bit. Useu \"ddm -p pae\" per eliminar el kernel PAE del vostre sistema. Tingueu en compte que no es pot eliminar el nucli que s'està executant en aquell moment. "
 
 #: en/help.html+html.body.div.h3:36
 msgid "# ddm -i fixbumblebee"
@@ -357,9 +295,7 @@ msgstr "Fitxer: /var/log/ddm.log"
 
 #: en/help.html+html.body.div.p:41
 msgid ""
-"Please, attach your log file when you post an issue on our forum: <a href="
-"\"http://forums.solydxk.com\" target=\"_blank\">http://forums.solydxk.com</a>"
-msgstr ""
-"Si us plau, adjunteu el vostre fitxer de registre quan informeu d'un "
-"incident al nostre fòrum <a href=\"http://forums.solydxk.com\" target="
-"\"_blank\">http://forums.solydxk.com</a> "
+"Please, attach your log file when you post an issue on our forum: <a "
+"href=\"http://forums.solydxk.com\" "
+"target=\"_blank\">http://forums.solydxk.com</a>"
+msgstr "Si us plau, adjunteu el vostre fitxer de registre quan informeu d'un incident al nostre fòrum <a href=\"http://forums.solydxk.com\" target=\"_blank\">http://forums.solydxk.com</a> "
