--- a/po/en_AU.po
+++ b/po/en_AU.po
@@ -1,7 +1,7 @@
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
-#
+# 
 # Translators:
 # Michael Findlay <translate@cobber-linux.org>, 2016
 msgid ""
@@ -9,14 +9,13 @@ msgstr ""
 "Project-Id-Version: device-driver-manager\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-04-01 18:43+0200\n"
-"PO-Revision-Date: 2016-02-14 10:05+0000\n"
-"Last-Translator: Michael Findlay <translate@cobber-linux.org>\n"
-"Language-Team: English (Australia) (http://www.transifex.com/solydxk/device-"
-"driver-manager/language/en_AU/)\n"
-"Language: en_AU\n"
+"PO-Revision-Date: 2017-04-09 09:18+0000\n"
+"Last-Translator: Arjen Balfoort <arjenbalfoort@solydxk.com>\n"
+"Language-Team: English (Australia) (http://www.transifex.com/solydxk/device-driver-manager/language/en_AU/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Language: en_AU\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #: ../usr/lib/ddm/ddm.py:54 ../usr/lib/ddm/main.py:32
@@ -53,29 +52,17 @@ msgstr "No internet connection"
 msgid ""
 "You need an internet connection to install the additional software.\n"
 "Please, connect to the internet and try again."
-msgstr ""
-"You need an internet connection to install the additional software.\n"
-"Please, connect to the internet and try again."
+msgstr "You need an internet connection to install the additional software.\nPlease, connect to the internet and try again."
 
 #: ../usr/lib/ddm/ddm.py:187
 msgid ""
-"You have selected to install drivers from the backports repository whenever "
-"they are available.\n"
+"You have selected to install drivers from the backports repository whenever they are available.\n"
 "\n"
-"Although you can run more up to date software using the backports "
-"repository,\n"
+"Although you can run more up to date software using the backports repository,\n"
 "you introduce a greater risk of breakage doing so.\n"
 "\n"
 "Are you sure you want to continue?"
-msgstr ""
-"You have selected to install drivers from the backports repository whenever "
-"they are available.\n"
-"\n"
-"Although you can run more up to date software using the backports "
-"repository,\n"
-"you introduce a greater risk of breakage doing so.\n"
-"\n"
-"Are you sure you want to continue?"
+msgstr "You have selected to install drivers from the backports repository whenever they are available.\n\nAlthough you can run more up to date software using the backports repository,\nyou introduce a greater risk of breakage doing so.\n\nAre you sure you want to continue?"
 
 #: ../usr/lib/ddm/ddm.py:221
 msgid "Device"
@@ -89,9 +76,7 @@ msgstr "Remove kernel"
 msgid ""
 "You cannot remove a booted kernel.\n"
 "Please, boot another kernel and try again."
-msgstr ""
-"You cannot remove a booted kernel.\n"
-"Please, boot another kernel and try again."
+msgstr "You cannot remove a booted kernel.\nPlease, boot another kernel and try again."
 
 #: ../usr/lib/ddm/ddm.py:259
 msgid "Hardware scan"
@@ -111,15 +96,10 @@ msgstr "ATI FirePro/Gl card found"
 
 #: ../usr/lib/ddm/ddm.py:364
 msgid ""
-"Installing the proprietary driver for an ATI FirePro/Gl card may render your "
-"system unbootable.\n"
+"Installing the proprietary driver for an ATI FirePro/Gl card may render your system unbootable.\n"
 "\n"
 "Proceed at your own risk."
-msgstr ""
-"Installing the proprietary driver for an ATI FirePro/Gl card may render your "
-"system unbootable.\n"
-"\n"
-"Proceed at your own risk."
+msgstr "Installing the proprietary driver for an ATI FirePro/Gl card may render your system unbootable.\n\nProceed at your own risk."
 
 #: ../usr/lib/ddm/ddm.py:562
 msgid "PAE capable system"
@@ -145,9 +125,7 @@ msgstr "The driver cannot be found in repository."
 msgid ""
 "Download error.\n"
 "Check your internet connection."
-msgstr ""
-"Download error.\n"
-"Check your internet connection."
+msgstr "Download error.\nCheck your internet connection."
 
 #: ../usr/lib/ddm/ddm.py:686
 msgid "DDM cannot purge the driver."
@@ -172,10 +150,7 @@ msgid ""
 "There was an error during the installation.\n"
 "Please, run 'sudo apt-get -f install' in a terminal.\n"
 "Visit our forum for support: http://forums.solydxk.com"
-msgstr ""
-"There was an error during the installation.\n"
-"Please, run 'sudo apt-get -f install' in a terminal.\n"
-"Visit our forum for support: http://forums.solydxk.com"
+msgstr "There was an error during the installation.\nPlease, run 'sudo apt-get -f install' in a terminal.\nVisit our forum for support: http://forums.solydxk.com"
 
 #: ../usr/lib/ddm/ddm.py:699
 msgid "The software has been successfully installed."
@@ -187,23 +162,16 @@ msgstr "You will need to restart your system."
 
 #: ../usr/lib/ddm/main.py:33
 msgid ""
-"Device Driver Manager helps to install proprietary drivers for your "
-"hardware.\n"
+"Device Driver Manager helps to install proprietary drivers for your hardware.\n"
 "Only install proprietary drivers if you are sure you really need them.\n"
 "Usually open drivers are enough."
-msgstr ""
-"Device Driver Manager helps to install proprietary drivers for your "
-"hardware.\n"
-"Only install proprietary drivers if you are sure you really need them.\n"
-"Usually open drivers are enough."
+msgstr "Device Driver Manager helps to install proprietary drivers for your hardware.\nOnly install proprietary drivers if you are sure you really need them.\nUsually open drivers are enough."
 
 #: ../usr/lib/ddm/main.py:55
 msgid ""
 "Device Driver Manager cannot be started in a live environment\n"
 "You can use the --force argument to start DDM in a live environment"
-msgstr ""
-"Device Driver Manager cannot be started in a live environment\n"
-"You can use the --force argument to start DDM in a live environment"
+msgstr "Device Driver Manager cannot be started in a live environment\nYou can use the --force argument to start DDM in a live environment"
 
 #: ../usr/lib/ddm/main.py:83
 msgid "Unexpected error"
@@ -213,9 +181,7 @@ msgstr "Unexpected error"
 msgid ""
 "DDM has failed with the following unexpected error. Please submit a bug "
 "report!"
-msgstr ""
-"DDM has failed with the following unexpected error. Please submit a bug "
-"report!"
+msgstr "DDM has failed with the following unexpected error. Please submit a bug report!"
 
 #: en/help.html+html.body.h1:8
 msgid "Device Driver Manager Help"
@@ -232,12 +198,7 @@ msgid ""
 "installed and allows to install the PAE kernel for multi-core 32-bit "
 "systems. The Device Driver Manager will only list those devices that are "
 "supported. It will not list any other devices then mentioned above."
-msgstr ""
-"The Device Driver Manager is a tool to help users installing third-party "
-"hardware drivers. Currently Nvidia, ATI and Broadcom drivers can be "
-"installed and allows to install the PAE kernel for multi-core 32-bit "
-"systems. The Device Driver Manager will only list those devices that are "
-"supported. It will not list any other devices than mentioned above."
+msgstr "The Device Driver Manager is a tool to help users installing third-party hardware drivers. Currently Nvidia, ATI and Broadcom drivers can be installed and allows to install the PAE kernel for multi-core 32-bit systems. The Device Driver Manager will only list those devices that are supported. It will not list any other devices than mentioned above."
 
 #: en/help.html+html.body.div.h2:13
 msgid "Important"
@@ -248,10 +209,7 @@ msgid ""
 "The Device Driver Manager can only install drivers which are available in "
 "the repositories. Make sure you have an internet connection if you want to "
 "install the drivers."
-msgstr ""
-"The Device Driver Manager can only install drivers that are available in the "
-"repositories. Make sure you have an internet connection if you want to "
-"install the drivers."
+msgstr "The Device Driver Manager can only install drivers that are available in the repositories. Make sure you have an internet connection if you want to install the drivers."
 
 #: en/help.html+html.body.div.h2:16
 msgid "Commands"
@@ -261,9 +219,7 @@ msgstr "Commands"
 msgid ""
 "If you prefer to install the drivers by terminal, you can use the following "
 "commands:"
-msgstr ""
-"If you prefer to install the drivers using a terminal, you can use the "
-"following commands:"
+msgstr "If you prefer to install the drivers using a terminal, you can use the following commands:"
 
 #: en/help.html+html.body.div.h3:21
 msgid "# ddm -i ati"
@@ -275,11 +231,7 @@ msgid ""
 "from version HD 5000 and up are supported by the fglrx drivers. Versions "
 "between 1000 and 5000 will use the Radeon drivers. Use \"ddm -p ati\" to "
 "remove the drivers from your system."
-msgstr ""
-"This will install the fglrx drivers for your ATI graphical card. ATI cards "
-"from version HD 5000 and up are supported by the fglrx drivers. Versions "
-"between 1000 and 5000 will use the Radeon drivers. Use \"ddm -p ati\" to "
-"remove the drivers from your system."
+msgstr "This will install the fglrx drivers for your ATI graphical card. ATI cards from version HD 5000 and up are supported by the fglrx drivers. Versions between 1000 and 5000 will use the Radeon drivers. Use \"ddm -p ati\" to remove the drivers from your system."
 
 #: en/help.html+html.body.div.h3:24
 msgid "# ddm -i nvidia"
@@ -288,12 +240,9 @@ msgstr "# ddm -i nvidia"
 #: en/help.html+html.body.div.p:25
 msgid ""
 "This will select the right drivers for your Nvidia graphical card. It will "
-"select the Bumblebee drivers in case you have a hybrid card (both Nvidia and "
-"Intel). Use \"ddm -p nvidia\" to remove the drivers from your system."
-msgstr ""
-"This will select the right drivers for your Nvidia graphical card. It will "
-"select the Bumblebee drivers in case you have a hybrid card (both Nvidia and "
-"Intel). Use \"ddm -p nvidia\" to remove the drivers from your system."
+"select the Bumblebee drivers in case you have a hybrid card (both Nvidia and"
+" Intel). Use \"ddm -p nvidia\" to remove the drivers from your system."
+msgstr "This will select the right drivers for your Nvidia graphical card. It will select the Bumblebee drivers in case you have a hybrid card (both Nvidia and Intel). Use \"ddm -p nvidia\" to remove the drivers from your system."
 
 #: en/help.html+html.body.div.h3:27
 msgid "# ddm -i open"
@@ -303,9 +252,7 @@ msgstr "# ddm -i open"
 msgid ""
 "You can use this command if you want to revert back to the open Nouveau "
 "drivers. It will remove any proprietary drivers from your system."
-msgstr ""
-"You can use this command if you want to revert back to the open Nouveau "
-"drivers. It will remove any proprietary drivers from your system."
+msgstr "You can use this command if you want to revert back to the open Nouveau drivers. It will remove any proprietary drivers from your system."
 
 #: en/help.html+html.body.div.h3:30
 msgid "# ddm -i broadcom"
@@ -315,9 +262,7 @@ msgstr "# ddm -i broadcom"
 msgid ""
 "This command will install the right driver for your wireless Broadcom "
 "adapter. Use \"ddm -p broadcom\" to remove the drivers from your system."
-msgstr ""
-"This command will install the right driver for your wireless Broadcom "
-"adapter. Use \"ddm -p broadcom\" to remove the drivers from your system."
+msgstr "This command will install the right driver for your wireless Broadcom adapter. Use \"ddm -p broadcom\" to remove the drivers from your system."
 
 #: en/help.html+html.body.div.h3:33
 msgid "# ddm -i pae"
@@ -325,13 +270,11 @@ msgstr "# ddm -i pae"
 
 #: en/help.html+html.body.div.p:34
 msgid ""
-"This will install the PAE kernel on multi-processor systems running a 32-bit "
-"OS. Use \"ddm -p pae\" to remove the PAE kernel from your system. Note that "
-"you cannot remove the kernel when you are currently booted into that kernel."
-msgstr ""
-"This will install the PAE kernel on multi-processor systems running a 32-bit "
-"OS. Use \"ddm -p pae\" to remove the PAE kernel from your system. Note that "
-"you cannot remove the kernel when you are currently booted into that kernel."
+"This will install the PAE kernel on multi-processor systems running a 32-bit"
+" OS. Use \"ddm -p pae\" to remove the PAE kernel from your system. Note that"
+" you cannot remove the kernel when you are currently booted into that "
+"kernel."
+msgstr "This will install the PAE kernel on multi-processor systems running a 32-bit OS. Use \"ddm -p pae\" to remove the PAE kernel from your system. Note that you cannot remove the kernel when you are currently booted into that kernel."
 
 #: en/help.html+html.body.div.h3:36
 msgid "# ddm -i fixbumblebee"
@@ -351,8 +294,7 @@ msgstr "File: /var/log/ddm.log"
 
 #: en/help.html+html.body.div.p:41
 msgid ""
-"Please, attach your log file when you post an issue on our forum: <a href="
-"\"http://forums.solydxk.com\" target=\"_blank\">http://forums.solydxk.com</a>"
-msgstr ""
-"Please, attach your log file when you post an issue on our forum: <a href="
-"\"http://forums.solydxk.com\" target=\"_blank\">http://forums.solydxk.com</a>"
+"Please, attach your log file when you post an issue on our forum: <a "
+"href=\"http://forums.solydxk.com\" "
+"target=\"_blank\">http://forums.solydxk.com</a>"
+msgstr "Please, attach your log file when you post an issue on our forum: <a href=\"http://forums.solydxk.com\" target=\"_blank\">http://forums.solydxk.com</a>"
