--- a/po/es.po
+++ b/po/es.po
@@ -1,7 +1,7 @@
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
-#
+# 
 # Translators:
 # Ariel Méndez <arielmendz@gmail.com>, 2015
 msgid ""
@@ -9,14 +9,13 @@ msgstr ""
 "Project-Id-Version: device-driver-manager\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-04-01 18:43+0200\n"
-"PO-Revision-Date: 2015-10-31 16:37+0000\n"
-"Last-Translator: Arjen Balfoort <schoelje@solydxk.com>\n"
-"Language-Team: Spanish (http://www.transifex.com/solydxk/device-driver-"
-"manager/language/es/)\n"
-"Language: es\n"
+"PO-Revision-Date: 2017-04-09 09:18+0000\n"
+"Last-Translator: Arjen Balfoort <arjenbalfoort@solydxk.com>\n"
+"Language-Team: Spanish (http://www.transifex.com/solydxk/device-driver-manager/language/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Language: es\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #: ../usr/lib/ddm/ddm.py:54 ../usr/lib/ddm/main.py:32
@@ -53,17 +52,13 @@ msgstr "Sin conexión a Internet"
 msgid ""
 "You need an internet connection to install the additional software.\n"
 "Please, connect to the internet and try again."
-msgstr ""
-"Es necesaria una conexión a internet para instalar el software adicional. "
-"Conéctese a internet e intente de nuevo."
+msgstr "Es necesaria una conexión a internet para instalar el software adicional. Conéctese a internet e intente de nuevo."
 
 #: ../usr/lib/ddm/ddm.py:187
 msgid ""
-"You have selected to install drivers from the backports repository whenever "
-"they are available.\n"
+"You have selected to install drivers from the backports repository whenever they are available.\n"
 "\n"
-"Although you can run more up to date software using the backports "
-"repository,\n"
+"Although you can run more up to date software using the backports repository,\n"
 "you introduce a greater risk of breakage doing so.\n"
 "\n"
 "Are you sure you want to continue?"
@@ -81,9 +76,7 @@ msgstr "Eliminar kernel"
 msgid ""
 "You cannot remove a booted kernel.\n"
 "Please, boot another kernel and try again."
-msgstr ""
-"No se puede eliminar un kernel iniciado. Inicie con otro kernel e intente de "
-"nuevo."
+msgstr "No se puede eliminar un kernel iniciado. Inicie con otro kernel e intente de nuevo."
 
 #: ../usr/lib/ddm/ddm.py:259
 msgid "Hardware scan"
@@ -103,8 +96,7 @@ msgstr ""
 
 #: ../usr/lib/ddm/ddm.py:364
 msgid ""
-"Installing the proprietary driver for an ATI FirePro/Gl card may render your "
-"system unbootable.\n"
+"Installing the proprietary driver for an ATI FirePro/Gl card may render your system unbootable.\n"
 "\n"
 "Proceed at your own risk."
 msgstr ""
@@ -158,10 +150,7 @@ msgid ""
 "There was an error during the installation.\n"
 "Please, run 'sudo apt-get -f install' in a terminal.\n"
 "Visit our forum for support: http://forums.solydxk.com"
-msgstr ""
-"Ocurrió un error durante la instalación.\n"
-"Ejecute 'sudo apt-get -f install' en la terminal.\n"
-"Visite nuestro foro para soporte: http://forums.solydxk.com"
+msgstr "Ocurrió un error durante la instalación.\nEjecute 'sudo apt-get -f install' en la terminal.\nVisite nuestro foro para soporte: http://forums.solydxk.com"
 
 #: ../usr/lib/ddm/ddm.py:699
 msgid "The software has been successfully installed."
@@ -173,8 +162,7 @@ msgstr "Será necesario reiniciar su sistema."
 
 #: ../usr/lib/ddm/main.py:33
 msgid ""
-"Device Driver Manager helps to install proprietary drivers for your "
-"hardware.\n"
+"Device Driver Manager helps to install proprietary drivers for your hardware.\n"
 "Only install proprietary drivers if you are sure you really need them.\n"
 "Usually open drivers are enough."
 msgstr ""
@@ -183,10 +171,7 @@ msgstr ""
 msgid ""
 "Device Driver Manager cannot be started in a live environment\n"
 "You can use the --force argument to start DDM in a live environment"
-msgstr ""
-"DDM no se puede ejecutar en un entorno live\n"
-"\n"
-"Para forzar su inicio, utilice el argumento '--force'"
+msgstr "DDM no se puede ejecutar en un entorno live\n\nPara forzar su inicio, utilice el argumento '--force'"
 
 #: ../usr/lib/ddm/main.py:83
 msgid "Unexpected error"
@@ -196,9 +181,7 @@ msgstr "Error inesperado"
 msgid ""
 "DDM has failed with the following unexpected error. Please submit a bug "
 "report!"
-msgstr ""
-"DDM ha fallado con el siguiente error inesperado. Por favor, envíe un "
-"informe del error."
+msgstr "DDM ha fallado con el siguiente error inesperado. Por favor, envíe un informe del error."
 
 #: en/help.html+html.body.h1:8
 msgid "Device Driver Manager Help"
@@ -215,13 +198,7 @@ msgid ""
 "installed and allows to install the PAE kernel for multi-core 32-bit "
 "systems. The Device Driver Manager will only list those devices that are "
 "supported. It will not list any other devices then mentioned above."
-msgstr ""
-"El Administrador de Drivers es una herramienta para ayudar a los usuarios a "
-"instalar drivers para hardware de terceros. Actualmente, permite la "
-"instalación de drivers de Nvidia, ATI y Broadcom, y el kernel PAE para "
-"sistemas multi-núcleo de 32-bits. El Administrador de Drivers listará solo "
-"aquellos dispositivos soportados. No listará ningún otro dispositivo aparte "
-"de los mencionados anteriormente."
+msgstr "El Administrador de Drivers es una herramienta para ayudar a los usuarios a instalar drivers para hardware de terceros. Actualmente, permite la instalación de drivers de Nvidia, ATI y Broadcom, y el kernel PAE para sistemas multi-núcleo de 32-bits. El Administrador de Drivers listará solo aquellos dispositivos soportados. No listará ningún otro dispositivo aparte de los mencionados anteriormente."
 
 #: en/help.html+html.body.div.h2:13
 msgid "Important"
@@ -232,10 +209,7 @@ msgid ""
 "The Device Driver Manager can only install drivers which are available in "
 "the repositories. Make sure you have an internet connection if you want to "
 "install the drivers."
-msgstr ""
-"El Administrador de Drivers solo puede instalar drivers disponibles en los "
-"repositorios. Asegúrese de tener conexión a internet si quiere instalar los "
-"drivers."
+msgstr "El Administrador de Drivers solo puede instalar drivers disponibles en los repositorios. Asegúrese de tener conexión a internet si quiere instalar los drivers."
 
 #: en/help.html+html.body.div.h2:16
 msgid "Commands"
@@ -245,9 +219,7 @@ msgstr "Comandos"
 msgid ""
 "If you prefer to install the drivers by terminal, you can use the following "
 "commands:"
-msgstr ""
-"Si prefiere instalar los drivers a través de la terminal, puede utilizar los "
-"siguientes comandos:"
+msgstr "Si prefiere instalar los drivers a través de la terminal, puede utilizar los siguientes comandos:"
 
 #: en/help.html+html.body.div.h3:21
 msgid "# ddm -i ati"
@@ -259,11 +231,7 @@ msgid ""
 "from version HD 5000 and up are supported by the fglrx drivers. Versions "
 "between 1000 and 5000 will use the Radeon drivers. Use \"ddm -p ati\" to "
 "remove the drivers from your system."
-msgstr ""
-"Esto instalará los drivers fglrx para su tarjeta gráfica ATI. Las tarjetas "
-"gráficas ATI a partir de la versión HD 5000 en adelante son soportadas por "
-"los drivers fglrx. Las versiones entre 1000 y 5000 utilizarán los drivers "
-"Radeon. Use \"ddm -p ati\" para quitar los drivers de su sistema."
+msgstr "Esto instalará los drivers fglrx para su tarjeta gráfica ATI. Las tarjetas gráficas ATI a partir de la versión HD 5000 en adelante son soportadas por los drivers fglrx. Las versiones entre 1000 y 5000 utilizarán los drivers Radeon. Use \"ddm -p ati\" para quitar los drivers de su sistema."
 
 #: en/help.html+html.body.div.h3:24
 msgid "# ddm -i nvidia"
@@ -272,13 +240,9 @@ msgstr "# ddm -i nvidia"
 #: en/help.html+html.body.div.p:25
 msgid ""
 "This will select the right drivers for your Nvidia graphical card. It will "
-"select the Bumblebee drivers in case you have a hybrid card (both Nvidia and "
-"Intel). Use \"ddm -p nvidia\" to remove the drivers from your system."
-msgstr ""
-"Esto seleccionará los drivers apropiados para su tarjeta gráfica Nvidia. En "
-"caso de tener una tarjeta híbrida (Nvidia e Intel al mismo tiempo) se "
-"seleccionará el driver Bumblebee. Utilice \"ddm -p nvidia\" para quitar los "
-"drivers de su sistema."
+"select the Bumblebee drivers in case you have a hybrid card (both Nvidia and"
+" Intel). Use \"ddm -p nvidia\" to remove the drivers from your system."
+msgstr "Esto seleccionará los drivers apropiados para su tarjeta gráfica Nvidia. En caso de tener una tarjeta híbrida (Nvidia e Intel al mismo tiempo) se seleccionará el driver Bumblebee. Utilice \"ddm -p nvidia\" para quitar los drivers de su sistema."
 
 #: en/help.html+html.body.div.h3:27
 msgid "# ddm -i open"
@@ -288,9 +252,7 @@ msgstr "# ddm -i open"
 msgid ""
 "You can use this command if you want to revert back to the open Nouveau "
 "drivers. It will remove any proprietary drivers from your system."
-msgstr ""
-"Puede utilizar este comando para volver a los drivers Nouveau. Ésto quitará "
-"cualquier driver propietario de su sistema."
+msgstr "Puede utilizar este comando para volver a los drivers Nouveau. Ésto quitará cualquier driver propietario de su sistema."
 
 #: en/help.html+html.body.div.h3:30
 msgid "# ddm -i broadcom"
@@ -300,9 +262,7 @@ msgstr "# ddm -i broadcom"
 msgid ""
 "This command will install the right driver for your wireless Broadcom "
 "adapter. Use \"ddm -p broadcom\" to remove the drivers from your system."
-msgstr ""
-"Éste comando instalará los drivers apropiados para su adaptador wireless "
-"Broadcom. Utilice \"ddm -p broadcom\" para quitar los drivers de su sistema."
+msgstr "Éste comando instalará los drivers apropiados para su adaptador wireless Broadcom. Utilice \"ddm -p broadcom\" para quitar los drivers de su sistema."
 
 #: en/help.html+html.body.div.h3:33
 msgid "# ddm -i pae"
@@ -310,13 +270,11 @@ msgstr "# ddm -i pae"
 
 #: en/help.html+html.body.div.p:34
 msgid ""
-"This will install the PAE kernel on multi-processor systems running a 32-bit "
-"OS. Use \"ddm -p pae\" to remove the PAE kernel from your system. Note that "
-"you cannot remove the kernel when you are currently booted into that kernel."
-msgstr ""
-"Ésto instalará el kernel PAE en sistemas multi-procesador que ejecuten un SO "
-"de 32-bits. Utilice \"ddm -p pae\" para quitar el kernel PAE de su sistema. "
-"Nótese que no podrá remover el kernel si éste fue iniciado con el sistema."
+"This will install the PAE kernel on multi-processor systems running a 32-bit"
+" OS. Use \"ddm -p pae\" to remove the PAE kernel from your system. Note that"
+" you cannot remove the kernel when you are currently booted into that "
+"kernel."
+msgstr "Ésto instalará el kernel PAE en sistemas multi-procesador que ejecuten un SO de 32-bits. Utilice \"ddm -p pae\" para quitar el kernel PAE de su sistema. Nótese que no podrá remover el kernel si éste fue iniciado con el sistema."
 
 #: en/help.html+html.body.div.h3:36
 msgid "# ddm -i fixbumblebee"
@@ -336,9 +294,7 @@ msgstr "Archivo: /var/log/ddm.log"
 
 #: en/help.html+html.body.div.p:41
 msgid ""
-"Please, attach your log file when you post an issue on our forum: <a href="
-"\"http://forums.solydxk.com\" target=\"_blank\">http://forums.solydxk.com</a>"
-msgstr ""
-"Por favor, adjunte su archivo de log cuando postee un inconveniente en "
-"nuestro foro: <a href=\"http://forums.solydxk.com\" target=\"_blank\">http://"
-"forums.solydxk.com</a>"
+"Please, attach your log file when you post an issue on our forum: <a "
+"href=\"http://forums.solydxk.com\" "
+"target=\"_blank\">http://forums.solydxk.com</a>"
+msgstr "Por favor, adjunte su archivo de log cuando postee un inconveniente en nuestro foro: <a href=\"http://forums.solydxk.com\" target=\"_blank\">http://forums.solydxk.com</a>"
