--- a/po/lt.po
+++ b/po/lt.po
@@ -1,24 +1,22 @@
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
-#
+# 
 # Translators:
-# Moo, 2016
+# Moo, 2016-2017
 msgid ""
 msgstr ""
 "Project-Id-Version: device-driver-manager\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-04-01 18:43+0200\n"
-"PO-Revision-Date: 2016-08-25 14:01+0000\n"
+"PO-Revision-Date: 2017-04-25 18:06+0000\n"
 "Last-Translator: Moo\n"
-"Language-Team: Lithuanian (http://www.transifex.com/solydxk/device-driver-"
-"manager/language/lt/)\n"
-"Language: lt\n"
+"Language-Team: Lithuanian (http://www.transifex.com/solydxk/device-driver-manager/language/lt/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && (n"
-"%100<10 || n%100>=20) ? 1 : 2);\n"
+"Language: lt\n"
+"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 
 #: ../usr/lib/ddm/ddm.py:54 ../usr/lib/ddm/main.py:32
 #: ../usr/share/kde4/services/kcm_device_driver_manager.desktop.in.h:1
@@ -54,30 +52,17 @@ msgstr "Nėra interneto ryšio"
 msgid ""
 "You need an internet connection to install the additional software.\n"
 "Please, connect to the internet and try again."
-msgstr ""
-"Norėdami įdiegti papildomą programinę įrangą, turite prisijungti prie "
-"interneto.\n"
-"Prašome prisijungti prie interneto ir bandyti vėl."
+msgstr "Norėdami įdiegti papildomą programinę įrangą, turite prisijungti prie interneto.\nPrašome prisijungti prie interneto ir bandyti vėl."
 
 #: ../usr/lib/ddm/ddm.py:187
 msgid ""
-"You have selected to install drivers from the backports repository whenever "
-"they are available.\n"
+"You have selected to install drivers from the backports repository whenever they are available.\n"
 "\n"
-"Although you can run more up to date software using the backports "
-"repository,\n"
+"Although you can run more up to date software using the backports repository,\n"
 "you introduce a greater risk of breakage doing so.\n"
 "\n"
 "Are you sure you want to continue?"
-msgstr ""
-"Jūs pasirinkote įdiegti tvarkykles iš naujų versijų paketų saugyklos, kai "
-"tik jos bus prieinamos.\n"
-"\n"
-"Nors naudodamiesi naujų versijų paketų saugykla, jūs galite naudotis "
-"naujesne programine įranga,\n"
-"tačiau taip darydami sukeliate gedimo riziką.\n"
-"\n"
-"Ar tikrai norite tęsti?"
+msgstr "Jūs pasirinkote įdiegti tvarkykles iš naujų versijų paketų saugyklos, kai tik jos bus prieinamos.\n\nNors naudodamiesi naujų versijų paketų saugykla, jūs galite naudotis naujesne programine įranga,\ntačiau taip darydami sukeliate gedimo riziką.\n\nAr tikrai norite tęsti?"
 
 #: ../usr/lib/ddm/ddm.py:221
 msgid "Device"
@@ -91,9 +76,7 @@ msgstr "Šalinti branduolį"
 msgid ""
 "You cannot remove a booted kernel.\n"
 "Please, boot another kernel and try again."
-msgstr ""
-"Jūs negalite pašalinti paleisto branduolio.\n"
-"Prašome, paleisti kitą branduolį ir bandyti vėl."
+msgstr "Jūs negalite pašalinti paleisto branduolio.\nPrašome, paleisti kitą branduolį ir bandyti vėl."
 
 #: ../usr/lib/ddm/ddm.py:259
 msgid "Hardware scan"
@@ -113,15 +96,10 @@ msgstr "Rasta ATI FirePro/Gl plokštė"
 
 #: ../usr/lib/ddm/ddm.py:364
 msgid ""
-"Installing the proprietary driver for an ATI FirePro/Gl card may render your "
-"system unbootable.\n"
+"Installing the proprietary driver for an ATI FirePro/Gl card may render your system unbootable.\n"
 "\n"
 "Proceed at your own risk."
-msgstr ""
-"ATI FirePro/Gl plokštei skirtų nuosavybinių tvarkyklių įdiegimas gali "
-"padaryti jūsų sistemą nepaleidžiamą.\n"
-"\n"
-"Tęskite savo pačių rizika."
+msgstr "ATI FirePro/Gl plokštei skirtų nuosavybinių tvarkyklių įdiegimas gali padaryti jūsų sistemą nepaleidžiamą.\n\nTęskite savo pačių rizika."
 
 #: ../usr/lib/ddm/ddm.py:562
 msgid "PAE capable system"
@@ -147,9 +125,7 @@ msgstr "Nepavyksta saugykloje rasti tvarkyklės."
 msgid ""
 "Download error.\n"
 "Check your internet connection."
-msgstr ""
-"Atsiuntimo klaida.\n"
-"Patikrinkite savo interneto ryšį."
+msgstr "Atsiuntimo klaida.\nPatikrinkite savo interneto ryšį."
 
 #: ../usr/lib/ddm/ddm.py:686
 msgid "DDM cannot purge the driver."
@@ -163,22 +139,18 @@ msgstr "Ši plokštė yra nepalaikoma."
 msgid ""
 "Cannot get the Debian version from /etc/debian_version.\n"
 "Please install the base-files package."
-msgstr ""
+msgstr "Nepavyksta gauti Debian versijos iš /etc/debian_version.\nPrašome įdiegti base-files paketą."
 
 #: ../usr/lib/ddm/ddm.py:692
 msgid "Could not configure Nvidia Bumblebee."
-msgstr ""
+msgstr "Nepavyko sukonfigūruoti Nvidia Bumblebee."
 
 #: ../usr/lib/ddm/ddm.py:694
 msgid ""
 "There was an error during the installation.\n"
 "Please, run 'sudo apt-get -f install' in a terminal.\n"
 "Visit our forum for support: http://forums.solydxk.com"
-msgstr ""
-"Įdiegimo metu įvyko klaida.\n"
-"Prašome terminale įvykdyti \"sudo apt-get -f install\".\n"
-"Norėdami gauti palaikymą, apsilankykite mūsų forume: http://forums.solydxk."
-"com"
+msgstr "Įdiegimo metu įvyko klaida.\nPrašome terminale įvykdyti \"sudo apt-get -f install\".\nNorėdami gauti palaikymą, apsilankykite mūsų forume: http://forums.solydxk.com"
 
 #: ../usr/lib/ddm/ddm.py:699
 msgid "The software has been successfully installed."
@@ -190,24 +162,16 @@ msgstr "Jums reikės iš naujo paleisti kompiuterį."
 
 #: ../usr/lib/ddm/main.py:33
 msgid ""
-"Device Driver Manager helps to install proprietary drivers for your "
-"hardware.\n"
+"Device Driver Manager helps to install proprietary drivers for your hardware.\n"
 "Only install proprietary drivers if you are sure you really need them.\n"
 "Usually open drivers are enough."
-msgstr ""
-"Įrenginių tvarkyklių tvarkytuvė padeda įdiegti jūsų aparatinei įrangai "
-"skirtas nuosavybines tvarkykles.\n"
-"Įdiekite nuosavybines tvarkykles tik tuo atveju, jeigu esate tikri, kad jums "
-"jų tikrai reikia.\n"
-"Dažniausiai, pakanka atvirų tvarkyklių."
+msgstr "Įrenginių tvarkyklių tvarkytuvė padeda įdiegti jūsų aparatinei įrangai skirtas nuosavybines tvarkykles.\nĮdiekite nuosavybines tvarkykles tik tuo atveju, jeigu esate tikri, kad jums jų tikrai reikia.\nDažniausiai, pakanka atvirų tvarkyklių."
 
 #: ../usr/lib/ddm/main.py:55
 msgid ""
 "Device Driver Manager cannot be started in a live environment\n"
 "You can use the --force argument to start DDM in a live environment"
-msgstr ""
-"Įrenginių tvarkyklių tvarkytuvė negali būti paleista pristatymo aplinkoje\n"
-"Galite naudoti --force argumentą, kad paleistumėte ĮTT pristatymo aplinkoje"
+msgstr "Įrenginių tvarkyklių tvarkytuvė negali būti paleista pristatymo aplinkoje\nGalite naudoti --force argumentą, kad paleistumėte ĮTT pristatymo aplinkoje"
 
 #: ../usr/lib/ddm/main.py:83
 msgid "Unexpected error"
@@ -217,8 +181,7 @@ msgstr "Netikėta klaida"
 msgid ""
 "DDM has failed with the following unexpected error. Please submit a bug "
 "report!"
-msgstr ""
-"ĮTT patyrė nesėkmę su šia netikėta klaida. Prašome pranešti apie klaidą!"
+msgstr "ĮTT patyrė nesėkmę su šia netikėta klaida. Prašome pranešti apie klaidą!"
 
 #: en/help.html+html.body.h1:8
 msgid "Device Driver Manager Help"
@@ -235,13 +198,7 @@ msgid ""
 "installed and allows to install the PAE kernel for multi-core 32-bit "
 "systems. The Device Driver Manager will only list those devices that are "
 "supported. It will not list any other devices then mentioned above."
-msgstr ""
-"Įrenginių tvarkyklių tvarkytuvė yra įrankis, skirtas padėti naudotojams "
-"įdiegti trečiųjų šalių aparatinės įrangos tvarkykles. Šiuo metu gali būti "
-"įdiegtos Nvidia, ATI ir Broadcom tvarkytuvės bei yra leidžiama įdiegti PAE "
-"branduolį, skirtą kelių branduolių 32-bitų sistemoms. Įrenginių tvarkyklių "
-"tvarkytuvė išvardys tik tuos įrenginius, kurie yra palaikomi. Išskyrus juos, "
-"tvarkytuvė daugiau jokių įrenginių nevardys."
+msgstr "Įrenginių tvarkyklių tvarkytuvė yra įrankis, skirtas padėti naudotojams įdiegti trečiųjų šalių aparatinės įrangos tvarkykles. Šiuo metu gali būti įdiegtos Nvidia, ATI ir Broadcom tvarkytuvės bei yra leidžiama įdiegti PAE branduolį, skirtą kelių branduolių 32-bitų sistemoms. Įrenginių tvarkyklių tvarkytuvė išvardys tik tuos įrenginius, kurie yra palaikomi. Išskyrus juos, tvarkytuvė daugiau jokių įrenginių nevardys."
 
 #: en/help.html+html.body.div.h2:13
 msgid "Important"
@@ -252,10 +209,7 @@ msgid ""
 "The Device Driver Manager can only install drivers which are available in "
 "the repositories. Make sure you have an internet connection if you want to "
 "install the drivers."
-msgstr ""
-"Įrenginių tvarkyklių tvarkytuvė gali įdiegti tik tas tvarkykles, kurios yra "
-"prieinamos saugyklose. Norėdami įdiegti tvarkykles, įsitikinkite, kad esate "
-"prisijungę prie interneto."
+msgstr "Įrenginių tvarkyklių tvarkytuvė gali įdiegti tik tas tvarkykles, kurios yra prieinamos saugyklose. Norėdami įdiegti tvarkykles, įsitikinkite, kad esate prisijungę prie interneto."
 
 #: en/help.html+html.body.div.h2:16
 msgid "Commands"
@@ -265,9 +219,7 @@ msgstr "Komandos"
 msgid ""
 "If you prefer to install the drivers by terminal, you can use the following "
 "commands:"
-msgstr ""
-"Jeigu teikiate pirmenybę įdiegti tvarkykles per terminalą, galite naudoti "
-"šias komandas:"
+msgstr "Jeigu teikiate pirmenybę įdiegti tvarkykles per terminalą, galite naudoti šias komandas:"
 
 #: en/help.html+html.body.div.h3:21
 msgid "# ddm -i ati"
@@ -279,11 +231,7 @@ msgid ""
 "from version HD 5000 and up are supported by the fglrx drivers. Versions "
 "between 1000 and 5000 will use the Radeon drivers. Use \"ddm -p ati\" to "
 "remove the drivers from your system."
-msgstr ""
-"Tai, jūsų ATI grafikos plokštei įdiegs fglrx tvarkykles. Fglrx tvarkyklės "
-"palaiko ATI plokštes, pradedant nuo HD 5000 versijos ir naujesnes. Versijos "
-"tarp 1000 ir 5000 naudos Radeon tvarkykles. Naudokite \"ddm -p ati\", kad "
-"pašalintumėte tvarkykles iš savo sistemos."
+msgstr "Tai, jūsų ATI grafikos plokštei įdiegs fglrx tvarkykles. Fglrx tvarkyklės palaiko ATI plokštes, pradedant nuo HD 5000 versijos ir naujesnes. Versijos tarp 1000 ir 5000 naudos Radeon tvarkykles. Naudokite \"ddm -p ati\", kad pašalintumėte tvarkykles iš savo sistemos."
 
 #: en/help.html+html.body.div.h3:24
 msgid "# ddm -i nvidia"
@@ -292,13 +240,9 @@ msgstr "# ddm -i nvidia"
 #: en/help.html+html.body.div.p:25
 msgid ""
 "This will select the right drivers for your Nvidia graphical card. It will "
-"select the Bumblebee drivers in case you have a hybrid card (both Nvidia and "
-"Intel). Use \"ddm -p nvidia\" to remove the drivers from your system."
-msgstr ""
-"Tai, jūsų Nvidia grafikos plokštei parinks tinkamas tvarkykles. Tuo atveju, "
-"jeigu turite hibridinę plokštę (Nvidia ir Intel), tai parinks Bumblebee "
-"tvarkykles. Naudokite \"ddm -p nvidia\", kad pašalintumėte tvarkykles iš "
-"savo sistemos."
+"select the Bumblebee drivers in case you have a hybrid card (both Nvidia and"
+" Intel). Use \"ddm -p nvidia\" to remove the drivers from your system."
+msgstr "Tai, jūsų Nvidia grafikos plokštei parinks tinkamas tvarkykles. Tuo atveju, jeigu turite hibridinę plokštę (Nvidia ir Intel), tai parinks Bumblebee tvarkykles. Naudokite \"ddm -p nvidia\", kad pašalintumėte tvarkykles iš savo sistemos."
 
 #: en/help.html+html.body.div.h3:27
 msgid "# ddm -i open"
@@ -308,9 +252,7 @@ msgstr "# ddm -i open"
 msgid ""
 "You can use this command if you want to revert back to the open Nouveau "
 "drivers. It will remove any proprietary drivers from your system."
-msgstr ""
-"Jūs galite naudoti šią komandą, jeigu norite sugrįžti prie atvirų Nouveau "
-"tvarkyklių. Tai pašalins bet kokias nuosavybines tvarkykles iš jūsų sistemos."
+msgstr "Jūs galite naudoti šią komandą, jeigu norite sugrįžti prie atvirų Nouveau tvarkyklių. Tai pašalins bet kokias nuosavybines tvarkykles iš jūsų sistemos."
 
 #: en/help.html+html.body.div.h3:30
 msgid "# ddm -i broadcom"
@@ -320,9 +262,7 @@ msgstr "# ddm -i broadcom"
 msgid ""
 "This command will install the right driver for your wireless Broadcom "
 "adapter. Use \"ddm -p broadcom\" to remove the drivers from your system."
-msgstr ""
-"Ši komanda jūsų belaidžiam Broadcom adapteriui įdiegs tinkamas tvarkykles. "
-"Naudokite \"ddm -p broadcom\", kad pašalintumėte tvarkykles iš savo sistemos."
+msgstr "Ši komanda jūsų belaidžiam Broadcom adapteriui įdiegs tinkamas tvarkykles. Naudokite \"ddm -p broadcom\", kad pašalintumėte tvarkykles iš savo sistemos."
 
 #: en/help.html+html.body.div.h3:33
 msgid "# ddm -i pae"
@@ -330,14 +270,11 @@ msgstr "# ddm -i pae"
 
 #: en/help.html+html.body.div.p:34
 msgid ""
-"This will install the PAE kernel on multi-processor systems running a 32-bit "
-"OS. Use \"ddm -p pae\" to remove the PAE kernel from your system. Note that "
-"you cannot remove the kernel when you are currently booted into that kernel."
-msgstr ""
-"Tai, kelių procesorių sistemose, kuriose vykdoma 32-bitų operacinė sistema, "
-"įdiegs PAE branduolį. Naudokite \"ddm -p pae\", kad pašalintumėte PAE "
-"branduolį iš savo sistemos. Turėkite omenyje, kad jūs negalite pašalinti "
-"branduolio, kuomet jūsų sistema yra paleista į tą branduolį."
+"This will install the PAE kernel on multi-processor systems running a 32-bit"
+" OS. Use \"ddm -p pae\" to remove the PAE kernel from your system. Note that"
+" you cannot remove the kernel when you are currently booted into that "
+"kernel."
+msgstr "Tai, kelių procesorių sistemose, kuriose vykdoma 32-bitų operacinė sistema, įdiegs PAE branduolį. Naudokite \"ddm -p pae\", kad pašalintumėte PAE branduolį iš savo sistemos. Turėkite omenyje, kad jūs negalite pašalinti branduolio, kuomet jūsų sistema yra paleista į tą branduolį."
 
 #: en/help.html+html.body.div.h3:36
 msgid "# ddm -i fixbumblebee"
@@ -349,7 +286,7 @@ msgstr "Tai pabandys pataisyti Bumblebee įdiegimą."
 
 #: en/help.html+html.body.div.h2:39
 msgid "Logging"
-msgstr ""
+msgstr "Registravimas"
 
 #: en/help.html+html.body.div.h3:40
 msgid "File: /var/log/ddm.log"
@@ -357,9 +294,7 @@ msgstr "Failas: /var/log/ddm.log"
 
 #: en/help.html+html.body.div.p:41
 msgid ""
-"Please, attach your log file when you post an issue on our forum: <a href="
-"\"http://forums.solydxk.com\" target=\"_blank\">http://forums.solydxk.com</a>"
-msgstr ""
-"Prašome, pridėti savo žurnalo failą, kai skelbiate apie problemą mūsų "
-"forume: <a href=\"http://forums.solydxk.com\" target=\"_blank\">http://"
-"forums.solydxk.com</a>"
+"Please, attach your log file when you post an issue on our forum: <a "
+"href=\"http://forums.solydxk.com\" "
+"target=\"_blank\">http://forums.solydxk.com</a>"
+msgstr "Prašome, pridėti savo žurnalo failą, kai skelbiate apie problemą mūsų forume: <a href=\"http://forums.solydxk.com\" target=\"_blank\">http://forums.solydxk.com</a>"
