--- a/po/pl.po
+++ b/po/pl.po
@@ -1,7 +1,7 @@
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
-#
+# 
 # Translators:
 # Wojciech Kolasinski <kolasinski@retsat1.com.pl>, 2015
 msgid ""
@@ -9,16 +9,14 @@ msgstr ""
 "Project-Id-Version: device-driver-manager\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-04-01 18:43+0200\n"
-"PO-Revision-Date: 2015-12-06 17:57+0000\n"
-"Last-Translator: Wojciech Kolasinski <kolasinski@retsat1.com.pl>\n"
-"Language-Team: Polish (http://www.transifex.com/solydxk/device-driver-"
-"manager/language/pl/)\n"
-"Language: pl\n"
+"PO-Revision-Date: 2017-04-09 09:18+0000\n"
+"Last-Translator: Arjen Balfoort <arjenbalfoort@solydxk.com>\n"
+"Language-Team: Polish (http://www.transifex.com/solydxk/device-driver-manager/language/pl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=3; plural=(n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 "
-"|| n%100>=20) ? 1 : 2);\n"
+"Language: pl\n"
+"Plural-Forms: nplurals=4; plural=(n==1 ? 0 : (n%10>=2 && n%10<=4) && (n%100<12 || n%100>14) ? 1 : n!=1 && (n%10>=0 && n%10<=1) || (n%10>=5 && n%10<=9) || (n%100>=12 && n%100<=14) ? 2 : 3);\n"
 
 #: ../usr/lib/ddm/ddm.py:54 ../usr/lib/ddm/main.py:32
 #: ../usr/share/kde4/services/kcm_device_driver_manager.desktop.in.h:1
@@ -54,27 +52,17 @@ msgstr "Brak sieci"
 msgid ""
 "You need an internet connection to install the additional software.\n"
 "Please, connect to the internet and try again."
-msgstr ""
-"Połączenie sieciowe jest niezbędne do instalacji dodatkowego "
-"oprogramowania.\n"
-"Połącz się z siecią i spróbuj ponownie."
+msgstr "Połączenie sieciowe jest niezbędne do instalacji dodatkowego oprogramowania.\nPołącz się z siecią i spróbuj ponownie."
 
 #: ../usr/lib/ddm/ddm.py:187
 msgid ""
-"You have selected to install drivers from the backports repository whenever "
-"they are available.\n"
+"You have selected to install drivers from the backports repository whenever they are available.\n"
 "\n"
-"Although you can run more up to date software using the backports "
-"repository,\n"
+"Although you can run more up to date software using the backports repository,\n"
 "you introduce a greater risk of breakage doing so.\n"
 "\n"
 "Are you sure you want to continue?"
-msgstr ""
-"Wybrałeś instalację sterowników z repozytorium \"backports\" o ile są "
-"dostępne.\n"
-"Używając repozytorium \"backports\" możesz zainstalować bardziej aktualne "
-"oprogramowanie ale z większym ryzykiem uszkodzenia systemu.\n"
-"Czy nadal chcesz kontynuować?"
+msgstr "Wybrałeś instalację sterowników z repozytorium \"backports\" o ile są dostępne.\nUżywając repozytorium \"backports\" możesz zainstalować bardziej aktualne oprogramowanie ale z większym ryzykiem uszkodzenia systemu.\nCzy nadal chcesz kontynuować?"
 
 #: ../usr/lib/ddm/ddm.py:221
 msgid "Device"
@@ -88,9 +76,7 @@ msgstr "Usuń jądro"
 msgid ""
 "You cannot remove a booted kernel.\n"
 "Please, boot another kernel and try again."
-msgstr ""
-"Nie możesz usunąć załadowanego jądra.\n"
-"Wybierz inne jądro i spróbuj ponownie."
+msgstr "Nie możesz usunąć załadowanego jądra.\nWybierz inne jądro i spróbuj ponownie."
 
 #: ../usr/lib/ddm/ddm.py:259
 msgid "Hardware scan"
@@ -110,14 +96,10 @@ msgstr "Znaleziono kartę ATI FirePro/Gl"
 
 #: ../usr/lib/ddm/ddm.py:364
 msgid ""
-"Installing the proprietary driver for an ATI FirePro/Gl card may render your "
-"system unbootable.\n"
+"Installing the proprietary driver for an ATI FirePro/Gl card may render your system unbootable.\n"
 "\n"
 "Proceed at your own risk."
-msgstr ""
-"Instalowanie sterownika własnościowego dla karty ATI FirePro/G może uczynić "
-"system nieuruchamialnym.\n"
-"Kontynuuj na swoje ryzyko."
+msgstr "Instalowanie sterownika własnościowego dla karty ATI FirePro/G może uczynić system nieuruchamialnym.\nKontynuuj na swoje ryzyko."
 
 #: ../usr/lib/ddm/ddm.py:562
 msgid "PAE capable system"
@@ -168,10 +150,7 @@ msgid ""
 "There was an error during the installation.\n"
 "Please, run 'sudo apt-get -f install' in a terminal.\n"
 "Visit our forum for support: http://forums.solydxk.com"
-msgstr ""
-"Wystąpił błąd podczas instalacji.\n"
-"Uruchom  'sudo apt-get -f install' w terminalu.\n"
-"W celu uzyskania dalszej pomocy odwiedź http://forums.solydxk.com"
+msgstr "Wystąpił błąd podczas instalacji.\nUruchom  'sudo apt-get -f install' w terminalu.\nW celu uzyskania dalszej pomocy odwiedź http://forums.solydxk.com"
 
 #: ../usr/lib/ddm/ddm.py:699
 msgid "The software has been successfully installed."
@@ -183,24 +162,16 @@ msgstr "Należy zrestartować system."
 
 #: ../usr/lib/ddm/main.py:33
 msgid ""
-"Device Driver Manager helps to install proprietary drivers for your "
-"hardware.\n"
+"Device Driver Manager helps to install proprietary drivers for your hardware.\n"
 "Only install proprietary drivers if you are sure you really need them.\n"
 "Usually open drivers are enough."
-msgstr ""
-"Menedżer sterowników pomaga instalować sterowniki własnościowe dla tego "
-"sprzętu.\n"
-"Instaluj sterowniki własnościowe tylko wtedy gdy naprawdę są potrzebne.\n"
-"Zazwyczaj sterowniki o otwartym kodzie są wystarczające."
+msgstr "Menedżer sterowników pomaga instalować sterowniki własnościowe dla tego sprzętu.\nInstaluj sterowniki własnościowe tylko wtedy gdy naprawdę są potrzebne.\nZazwyczaj sterowniki o otwartym kodzie są wystarczające."
 
 #: ../usr/lib/ddm/main.py:55
 msgid ""
 "Device Driver Manager cannot be started in a live environment\n"
 "You can use the --force argument to start DDM in a live environment"
-msgstr ""
-"Menedżer sterowników nie może być uruchamiany w środowisku \"live\"\n"
-"Można użyć argumentu --force  aby uruchomić menedżera(DDM) w środowisku "
-"\"live\""
+msgstr "Menedżer sterowników nie może być uruchamiany w środowisku \"live\"\nMożna użyć argumentu --force  aby uruchomić menedżera(DDM) w środowisku \"live\""
 
 #: ../usr/lib/ddm/main.py:83
 msgid "Unexpected error"
@@ -210,9 +181,7 @@ msgstr "Niespodziewany błąd"
 msgid ""
 "DDM has failed with the following unexpected error. Please submit a bug "
 "report!"
-msgstr ""
-"Menedżer sterowników zakończył działanie z powodu nieoczekiwanego błędu. "
-"Wyślij proszę raport o błędzie."
+msgstr "Menedżer sterowników zakończył działanie z powodu nieoczekiwanego błędu. Wyślij proszę raport o błędzie."
 
 #: en/help.html+html.body.h1:8
 msgid "Device Driver Manager Help"
@@ -229,12 +198,7 @@ msgid ""
 "installed and allows to install the PAE kernel for multi-core 32-bit "
 "systems. The Device Driver Manager will only list those devices that are "
 "supported. It will not list any other devices then mentioned above."
-msgstr ""
-"Menedżer sterowników jest narzędziem pomagającym instalować sterowniki "
-"innych firm. Obecnie jest możliwa instalacja sterowników Nvidia, ATI i "
-"Broadcom oraz jądra z obsługą PAE dla wielordzeniowych systemów 32-bitowych. "
-"Menedżer wyświetla jedynie listę instalowanych sterowników i żadne inne nie "
-"zostaną zainstalowane."
+msgstr "Menedżer sterowników jest narzędziem pomagającym instalować sterowniki innych firm. Obecnie jest możliwa instalacja sterowników Nvidia, ATI i Broadcom oraz jądra z obsługą PAE dla wielordzeniowych systemów 32-bitowych. Menedżer wyświetla jedynie listę instalowanych sterowników i żadne inne nie zostaną zainstalowane."
 
 #: en/help.html+html.body.div.h2:13
 msgid "Important"
@@ -245,10 +209,7 @@ msgid ""
 "The Device Driver Manager can only install drivers which are available in "
 "the repositories. Make sure you have an internet connection if you want to "
 "install the drivers."
-msgstr ""
-"Menedżer może zainstalować tylko sterowniki dostępne w repozytoriach. "
-"Upewnij się, że masz połączenie z siecią jeśli zamierzasz instalować "
-"sterowniki."
+msgstr "Menedżer może zainstalować tylko sterowniki dostępne w repozytoriach. Upewnij się, że masz połączenie z siecią jeśli zamierzasz instalować sterowniki."
 
 #: en/help.html+html.body.div.h2:16
 msgid "Commands"
@@ -258,9 +219,7 @@ msgstr "Polecenia"
 msgid ""
 "If you prefer to install the drivers by terminal, you can use the following "
 "commands:"
-msgstr ""
-"Jeśli wolisz instalować sterowniki w terminalu, możesz użyć następujących "
-"poleceń:"
+msgstr "Jeśli wolisz instalować sterowniki w terminalu, możesz użyć następujących poleceń:"
 
 #: en/help.html+html.body.div.h3:21
 msgid "# ddm -i ati"
@@ -272,11 +231,7 @@ msgid ""
 "from version HD 5000 and up are supported by the fglrx drivers. Versions "
 "between 1000 and 5000 will use the Radeon drivers. Use \"ddm -p ati\" to "
 "remove the drivers from your system."
-msgstr ""
-"Polecenie zainstaluje sterownik fglrx dla kart ATI. Karty ATI od wersji "
-"HD5000 są obsługiwane przez sterowniki fglrx. Wersje między 1000 a 5000 "
-"używają sterowników Radeon. Użyj \"ddm -p ati\"  w celu usunięcia "
-"sterowników z systemu."
+msgstr "Polecenie zainstaluje sterownik fglrx dla kart ATI. Karty ATI od wersji HD5000 są obsługiwane przez sterowniki fglrx. Wersje między 1000 a 5000 używają sterowników Radeon. Użyj \"ddm -p ati\"  w celu usunięcia sterowników z systemu."
 
 #: en/help.html+html.body.div.h3:24
 msgid "# ddm -i nvidia"
@@ -285,13 +240,9 @@ msgstr "# ddm -i nvidia"
 #: en/help.html+html.body.div.p:25
 msgid ""
 "This will select the right drivers for your Nvidia graphical card. It will "
-"select the Bumblebee drivers in case you have a hybrid card (both Nvidia and "
-"Intel). Use \"ddm -p nvidia\" to remove the drivers from your system."
-msgstr ""
-"Polecenie spowoduje wybranie właściwych sterowników Nvidia. W przypadku kart "
-"hybrydowych(zarówno Nvidia, jak i Intel) zostaną wybrane sterowniki "
-"Bumblebee.\n"
-"W celu usunięcia sterowników z systemu użyj:  \"ddm -p nvidia\""
+"select the Bumblebee drivers in case you have a hybrid card (both Nvidia and"
+" Intel). Use \"ddm -p nvidia\" to remove the drivers from your system."
+msgstr "Polecenie spowoduje wybranie właściwych sterowników Nvidia. W przypadku kart hybrydowych(zarówno Nvidia, jak i Intel) zostaną wybrane sterowniki Bumblebee.\nW celu usunięcia sterowników z systemu użyj:  \"ddm -p nvidia\""
 
 #: en/help.html+html.body.div.h3:27
 msgid "# ddm -i open"
@@ -301,9 +252,7 @@ msgstr "# ddm -i open"
 msgid ""
 "You can use this command if you want to revert back to the open Nouveau "
 "drivers. It will remove any proprietary drivers from your system."
-msgstr ""
-"Możesz użyć tego polecenia aby wrócić do otwartych sterowników Nouveau. "
-"Zostaną usunięte z systemu wszystkie sterowniki własnościowe."
+msgstr "Możesz użyć tego polecenia aby wrócić do otwartych sterowników Nouveau. Zostaną usunięte z systemu wszystkie sterowniki własnościowe."
 
 #: en/help.html+html.body.div.h3:30
 msgid "# ddm -i broadcom"
@@ -313,9 +262,7 @@ msgstr "# ddm -i broadcom"
 msgid ""
 "This command will install the right driver for your wireless Broadcom "
 "adapter. Use \"ddm -p broadcom\" to remove the drivers from your system."
-msgstr ""
-"Polecenie spowoduje instalację sterownika Broadcom dla urządzeń "
-"bezprzewodowych. Użycie \"ddm -p broadcom\"  spowoduje usunięcie sterowników."
+msgstr "Polecenie spowoduje instalację sterownika Broadcom dla urządzeń bezprzewodowych. Użycie \"ddm -p broadcom\"  spowoduje usunięcie sterowników."
 
 #: en/help.html+html.body.div.h3:33
 msgid "# ddm -i pae"
@@ -323,12 +270,11 @@ msgstr "# ddm -i pae"
 
 #: en/help.html+html.body.div.p:34
 msgid ""
-"This will install the PAE kernel on multi-processor systems running a 32-bit "
-"OS. Use \"ddm -p pae\" to remove the PAE kernel from your system. Note that "
-"you cannot remove the kernel when you are currently booted into that kernel."
-msgstr ""
-"Polecenie zainstaluje jądro z obsługa PAE w systemach wieloprocesorowych 32-"
-"bitowych. Nota bene, usunięcie jądra jest niemożliwe po jego uruchomieniu."
+"This will install the PAE kernel on multi-processor systems running a 32-bit"
+" OS. Use \"ddm -p pae\" to remove the PAE kernel from your system. Note that"
+" you cannot remove the kernel when you are currently booted into that "
+"kernel."
+msgstr "Polecenie zainstaluje jądro z obsługa PAE w systemach wieloprocesorowych 32-bitowych. Nota bene, usunięcie jądra jest niemożliwe po jego uruchomieniu."
 
 #: en/help.html+html.body.div.h3:36
 msgid "# ddm -i fixbumblebee"
@@ -348,8 +294,7 @@ msgstr "Plik: /var/log/ddm.log"
 
 #: en/help.html+html.body.div.p:41
 msgid ""
-"Please, attach your log file when you post an issue on our forum: <a href="
-"\"http://forums.solydxk.com\" target=\"_blank\">http://forums.solydxk.com</a>"
-msgstr ""
-"Proszę dołączyć plik logu wysyłając raport o błędzie na <a href=\"http://"
-"forums.solydxk.com\" target=\"_blank\">http://forums.solydxk.com</a>"
+"Please, attach your log file when you post an issue on our forum: <a "
+"href=\"http://forums.solydxk.com\" "
+"target=\"_blank\">http://forums.solydxk.com</a>"
+msgstr "Proszę dołączyć plik logu wysyłając raport o błędzie na <a href=\"http://forums.solydxk.com\" target=\"_blank\">http://forums.solydxk.com</a>"
